refactor: docs and semantic tokens

--- a/website/content/docs/concepts/cascade-layers.mdx
+++ b/website/content/docs/concepts/cascade-layers.mdx
@@ -3,9 +3,7 @@ title: Cascade Layers
 description: CSS cascade layers refer to the order in which CSS rules are applied to an HTML element.
 ---
 
-# Cascade Layers
-
-CSS cascade layers refer to the order in which CSS rules are applied to an HTML element. When multiple CSS rules apply
+When multiple CSS rules apply
 to the same element, the browser uses the cascade to determine which rule should take precedence. See the
 [MDN article](https://developer.mozilla.org/en-US/docs/Web/CSS/@layer) to learn more.
 
