--- a/website/content/docs/concepts/conditional-styles.mdx
+++ b/website/content/docs/concepts/conditional-styles.mdx
@@ -3,11 +3,11 @@ title: Conditional Styles
 description: Learn how to use conditional and responsive styles in Panda.
 ---
 
-# Conditional Styles
+When writing styles, you might need to apply specific changes depending on a specific condition, whether it's based on
+breakpoint, css pseudo state, media query or custom data attributes.
 
-When writing styles, you might need to apply specific changes depending on a specific condition, whether it's based on breakpoint, css pseudo state, media query or custom data attributes.
-
-Panda allows you to write conditional styles, and provides common condition shortcuts to make your life easier. Let's say you want to change the background color of a button when it's hovered. You can do it like this:
+Panda allows you to write conditional styles, and provides common condition shortcuts to make your life easier. Let's
+say you want to change the background color of a button when it's hovered. You can do it like this:
 
 ```jsx
 <button
@@ -24,7 +24,8 @@ Panda allows you to write conditional styles, and provides common condition shor
 
 ### Property based condition
 
-This works great, but might be a bit verbose. You can apply the condition `_hover` directly to the `bg` property, leading to a more concise syntax:
+This works great, but might be a bit verbose. You can apply the condition `_hover` directly to the `bg` property,
+leading to a more concise syntax:
 
 ```diff
 <button
@@ -42,7 +43,8 @@ This works great, but might be a bit verbose. You can apply the condition `_hove
 
 ### Nested condition
 
-Conditions in Panda can be nested, which means you can apply multiple conditions to a single property or another condition.
+Conditions in Panda can be nested, which means you can apply multiple conditions to a single property or another
+condition.
 
 Let's say you want to change the background color of a button when it's focused and hovered. You can do it like this:
 
@@ -67,7 +69,8 @@ Panda includes a set of common pseudo states that you can use to style your comp
 
 ## Arbitrary selectors
 
-What if you need a one-off selector that is not defined in your config's conditions? You can use the `css` function to generate classes for arbitrary selectors:
+What if you need a one-off selector that is not defined in your config's conditions? You can use the `css` function to
+generate classes for arbitrary selectors:
 
 ```tsx
 import { css } from '../styled-system/css'
@@ -182,7 +185,8 @@ You can style the `::before` and `::after` pseudo elements of an element using t
 #### Notes
 
 - **Before and After**: Ensure you wrap the content value in double quotes.
-- **Mixing with Conditions**: When using condition and pseudo elements, prefer to place the condition **before** the pseudo element.
+- **Mixing with Conditions**: When using condition and pseudo elements, prefer to place the condition **before** the
+  pseudo element.
 
 ```jsx
 css({
@@ -193,7 +197,8 @@ css({
 })
 ```
 
-The reason `_backdrop: { _dark: { color: 'red' } }` doesn't work is because it generated an invalid CSS structure that looks like:
+The reason `_backdrop: { _dark: { color: 'red' } }` doesn't work is because it generated an invalid CSS structure that
+looks like:
 
 ```css
 &::backdrop {
@@ -249,7 +254,8 @@ Use the `_motionReduce` and `_motionSafe` modifiers to style an element based on
 
 ### Color Scheme
 
-The `prefers-color-scheme` media feature is used to detect if the user has requested the system use a light or dark color theme.
+The `prefers-color-scheme` media feature is used to detect if the user has requested the system use a light or dark
+color theme.
 
 Use the `_osLight` and `_osDark` modifiers to style an element based on the user's color scheme preference:
 
@@ -279,7 +285,8 @@ Let's say your app is dark by default, but you want to allow users to switch to 
 
 ### Color Contrast
 
-The `prefers-contrast` media feature is used to detect if the user has requested the system use a high or low contrast theme.
+The `prefers-contrast` media feature is used to detect if the user has requested the system use a high or low contrast
+theme.
 
 Use the `_highContrast` and `_lessContrast` modifiers to style an element based on the user's color contrast preference:
 
@@ -313,7 +320,8 @@ Use the `_portrait` and `_landscape` modifiers to style an element based on the 
 
 ## Group Selectors
 
-When you need to style an element based on its parent element's state or attribute, you can add the `group` class to the parent element, and use any of the `_group*` modifiers on the child element.
+When you need to style an element based on its parent element's state or attribute, you can add the `group` class to the
+parent element, and use any of the `_group*` modifiers on the child element.
 
 ```jsx
 <div className="group">
@@ -321,11 +329,13 @@ When you need to style an element based on its parent element's state or attribu
 </div>
 ```
 
-This modifer for every pseudo class modifiers like `_groupHover`, `_groupActive`, `_groupFocus`, and `_groupDisabled`, etc.
+This modifer for every pseudo class modifiers like `_groupHover`, `_groupActive`, `_groupFocus`, and `_groupDisabled`,
+etc.
 
 ## Sibling Selectors
 
-When you need to style an element based on its sibling element's state or attribute, you can add the `peer` class to the sibling element, and use any of the `_peer*` modifiers on the target element.
+When you need to style an element based on its sibling element's state or attribute, you can add the `peer` class to the
+sibling element, and use any of the `_peer*` modifiers on the target element.
 
 ```jsx
 <div>
@@ -334,7 +344,8 @@ When you need to style an element based on its sibling element's state or attrib
 </div>
 ```
 
-> Note: This only works for when the element marked with `peer` is a previous siblings, that is, it comes before the element you want to start.
+> Note: This only works for when the element marked with `peer` is a previous siblings, that is, it comes before the
+> element you want to start.
 
 ## Data Attribute
 
@@ -355,9 +366,11 @@ You can style an element based on the direction of the text using the `_ltr` and
 </div>
 ```
 
-For this to work, you need to set the `dir` attribute on the parent element. In most cases,you can set this on the `html` element.
+For this to work, you need to set the `dir` attribute on the parent element. In most cases,you can set this on the
+`html` element.
 
-> **Note:** Consider using logical css properties like `marginInlineStart` and `marginInlineEnd` instead their physical counterparts like `marginLeft` and `marginRight`. This will reduce the need to use the `_ltr` and `_rtl` modifiers.
+> **Note:** Consider using logical css properties like `marginInlineStart` and `marginInlineEnd` instead their physical
+> counterparts like `marginLeft` and `marginRight`. This will reduce the need to use the `_ltr` and `_rtl` modifiers.
 
 ### State
 
@@ -374,7 +387,8 @@ You can style an element based on its `data-{state}` attribute using the corresp
 </div>
 ```
 
-This also works for common states like `data-active`, `data-disabled`, `data-focus`, `data-hover`, `data-invalid`, `data-required`, and `data-valid`.
+This also works for common states like `data-active`, `data-disabled`, `data-focus`, `data-hover`, `data-invalid`,
+`data-required`, and `data-valid`.
 
 ```jsx
 <div
@@ -387,7 +401,9 @@ This also works for common states like `data-active`, `data-disabled`, `data-foc
 </div>
 ```
 
-> Most of the `data-{state}` attributes typically mirror the corresponding browser pseudo class. For example, `data-hover` is equivalent to `:hover`, `data-focus` is equivalent to `:focus`, and `data-active` is equivalent to `:active`.
+> Most of the `data-{state}` attributes typically mirror the corresponding browser pseudo class. For example,
+> `data-hover` is equivalent to `:hover`, `data-focus` is equivalent to `:focus`, and `data-active` is equivalent to
+> `:active`.
 
 ### Orientation
 
@@ -420,7 +436,8 @@ You can style an element based on its `aria-{state}=true` attribute using the co
 </div>
 ```
 
-> Most of the `aria-{state}` attributes typically mirror the support ARIA states in the browser pseudo class. For example, `aria-checked=true` is styled with `_checked`, `aria-disabled=true` is styled with `_disabled`.
+> Most of the `aria-{state}` attributes typically mirror the support ARIA states in the browser pseudo class. For
+> example, `aria-checked=true` is styled with `_checked`, `aria-disabled=true` is styled with `_disabled`.
 
 ## Container queries
 
@@ -609,4 +626,5 @@ Here's a list of all the condition shortcuts you can use in Panda:
 
 ## Custom conditions
 
-Panda lets you create your own conditions, so you're not limited to the ones in the default preset. Learn more about customizing conditions [here](/docs/customization/conditions).
+Panda lets you create your own conditions, so you're not limited to the ones in the default preset. Learn more about
+customizing conditions [here](/docs/customization/conditions).
