--- a/website/content/docs/concepts/jsx-style-context.mdx
+++ b/website/content/docs/concepts/jsx-style-context.mdx
@@ -3,11 +3,8 @@ title: JSX Style Context
 description: JSX Style Context provides an ergonomic way to style compound components with slot recipes.
 ---
 
-# JSX Style Context
-
-JSX Style Context is a powerful feature that allows you to create compound components from slot recipes.
-
-It uses a context-based approach to distribute recipe styles across multiple child components, making it easier to style headless UI libraries like Ark UI, and Radix UI.
+It uses a context-based approach to distribute recipe styles across multiple child components, making it easier to style
+headless UI libraries like Ark UI, and Radix UI.
 
 ## Atomic Slot Recipe
 
@@ -111,7 +108,8 @@ This function is a factory function that returns three functions: `withRootProvi
 
 ### withRootProvider
 
-Creates the root component that provides the style context. Use this when the root component **does not render an underlying DOM element**.
+Creates the root component that provides the style context. Use this when the root component **does not render an
+underlying DOM element**.
 
 ```tsx
 import { Dialog } from '@ark-ui/react'
@@ -123,7 +121,8 @@ const DialogRoot = withRootProvider(Dialog.Root)
 
 ### withProvider
 
-Creates a component that both provides context and applies the root slot styles. Use this when the root component **renders an underlying DOM element**.
+Creates a component that both provides context and applies the root slot styles. Use this when the root component
+**renders an underlying DOM element**.
 
 > **Note:** It requires the root `slot` parameter to be passed.
 
@@ -137,7 +136,8 @@ const AvatarRoot = withProvider(Avatar.Root, 'root')
 
 ### withContext
 
-Creates a component that consumes the style context and applies slot styles. It does not accept variant props directly, but gets them from context.
+Creates a component that consumes the style context and applies slot styles. It does not accept variant props directly,
+but gets them from context.
 
 ```tsx
 import { Avatar } from '@ark-ui/react'
@@ -150,7 +150,8 @@ const AvatarFallback = withContext(Avatar.Fallback, 'fallback')
 
 ### unstyled prop
 
-Every component created with `createStyleContext` supports the `unstyled` prop to disable styling. It is useful when you want to opt-out of the recipe styles.
+Every component created with `createStyleContext` supports the `unstyled` prop to disable styling. It is useful when you
+want to opt-out of the recipe styles.
 
 - When applied the root component, will disable all styles
 - When applied to a child component, will disable the styles for that specific slot
@@ -173,7 +174,8 @@ Every component created with `createStyleContext` supports the `unstyled` prop t
 
 ### Config Recipes
 
-The rules of config recipes still applies when using `createStyleContext`. Ensure the name of the final component matches the name of the recipe.
+The rules of config recipes still applies when using `createStyleContext`. Ensure the name of the final component
+matches the name of the recipe.
 
 > If you want to use a custom name, you can configure the recipe's `jsx` property in the `panda.config.ts` file.
 
