--- a/website/content/docs/customization/conditions.mdx
+++ b/website/content/docs/customization/conditions.mdx
@@ -3,13 +3,13 @@ title: Conditions
 description: Learn how to customize conditions in your Panda config
 ---
 
-# Customizing Conditions
-
-Conditions allow you to apply different styles and behaviors based on specific conditions or states. They provide a way to target specific elements or apply styles in response to certain events or conditions.
+Conditions allow you to apply different styles and behaviors based on specific conditions or states. They provide a way
+to target specific elements or apply styles in response to certain events or conditions.
 
 ## Creating a condition
 
-To create a condition, you can use the conditions property in the config. Let's say we want to create a `groupHover` pseudo condition that applies styles to an element when a parent container with the `group` role is hovered.
+To create a condition, you can use the conditions property in the config. Let's say we want to create a `groupHover`
+pseudo condition that applies styles to an element when a parent container with the `group` role is hovered.
 
 ```ts filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -17,15 +17,14 @@ import { defineConfig } from '@pandacss/dev'
 export default defineConfig({
   conditions: {
     extend: {
-      groupHover: "[role=group]:where(:hover, [data-hover]) &",
-    },
-  },
-});
+      groupHover: '[role=group]:where(:hover, [data-hover]) &'
+    }
+  }
+})
 ```
 
-> ⚠️ The `&` character is mandatory, it is a placeholder for the current selector. It will be replaced with the actual selector when the condition is used.
-> It has to be used either at the beginning or at the end of the condition.
-
+> ⚠️ The `&` character is mandatory, it is a placeholder for the current selector. It will be replaced with the actual
+> selector when the condition is used. It has to be used either at the beginning or at the end of the condition.
 
 Then you can run the following command to generate the conditions JS code:
 
@@ -64,18 +63,18 @@ function App() {
     <div role="group">
       <span
         className={css({
-          color: { base: "blue.400", _groupHover: "blue.600" },
+          color: { base: 'blue.400', _groupHover: 'blue.600' }
         })}
       />
     </div>
-  );
+  )
 }
 ```
 
 ## Customizing Built-in Conditions
 
-You can extend the [default conditions](/docs/concepts/conditional-styles#reference) by using the `conditions.extend` property in the config.
-
+You can extend the [default conditions](/docs/concepts/conditional-styles#reference) by using the `conditions.extend`
+property in the config.
 
 ```ts filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -84,10 +83,10 @@ export default defineConfig({
   conditions: {
     extend: {
       // Extend the default `dark` condition
-      dark: '.dark &, [data-theme="dark"] &',
-    },
-  },
-});
+      dark: '.dark &, [data-theme="dark"] &'
+    }
+  }
+})
 ```
 
 Then you can run the following command to update the conditions JS code:
@@ -176,4 +175,5 @@ Read more about how to define type-safe container queries [here](/docs/concepts/
 
 ## Minimal setup
 
-If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guides/minimal-setup)
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it
+[here](/docs/guides/minimal-setup)
