--- a/website/content/docs/customization/config-functions.mdx
+++ b/website/content/docs/customization/config-functions.mdx
@@ -3,9 +3,8 @@ title: Config Functions
 description: Functions to expose types for your config.
 ---
 
-# Config Functions
-
-These Config Functions, help in defining and providing type information for your config. By utilizing these functions, you can enhance code readability, enforce consistency, and ensure robust type checking in config.
+Config functions help define and provide type information for your configuration. These utilities enhance code
+readability, enforce consistency, and ensure robust type checking.
 
 ## Config Creators
 
@@ -86,7 +85,8 @@ export const checkboxRecipe = defineSlotRecipe({
 
 ### `defineParts`
 
-It can be useful when you want to have the equivalent of a slot recipe without needing to split the class names bindings and instead just having a className that handles children on 1 DOM element.
+It can be useful when you want to have the equivalent of a slot recipe without needing to split the class names bindings
+and instead just having a className that handles children on 1 DOM element.
 
 It pairs well with [ZagJs](https://zagjs.com/) and [Ark-UI](https://ark-ui.com/)
 
