--- a/website/content/docs/customization/deprecations.mdx
+++ b/website/content/docs/customization/deprecations.mdx
@@ -3,9 +3,8 @@ title: Deprecations
 description: Deprecating tokens, utilities, patterns and config recipes.
 ---
 
-# Deprecations
-
-Deprecations are mostly relevant for large teams that want to deprecate certain utility, pattern, recipe, token, before removing them from the codebase.
+Deprecations are mostly relevant for large teams that want to deprecate certain utilities, patterns, recipes, or tokens
+before removing them from the codebase.
 
 ## Deprecating a Utility
 
@@ -80,7 +79,8 @@ export default defineConfig({
 
 ## Custom Deprecation Messages
 
-You can also provide a custom deprecation message by setting the `deprecated` property to a string. i.e. the migration message.
+You can also provide a custom deprecation message by setting the `deprecated` property to a string. i.e. the migration
+message.
 
 ```ts filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
