--- a/website/content/docs/customization/theme.mdx
+++ b/website/content/docs/customization/theme.mdx
@@ -3,9 +3,8 @@ title: Theme
 description: Customizing the default theme
 ---
 
-# Theme
-
 Panda comes with a default theme that is used to generate the utilities for your project. You can customize this theme
+to match your design requirements.
 
 ## Breakpoints
 
@@ -97,7 +96,6 @@ Panda ships with the following shadows by default:
 
 ### Sizing
 
-
 Use the `sizes` key in the theme section of your Panda config file to customize the default sizing values.
 
 ```ts filename="panda.config.ts"
@@ -116,7 +114,8 @@ export default defineConfig({
 })
 ```
 
-Panda ships with the following sizing tokens by default, in addition with the values from the default Panda [spacing](#spacing) tokens:
+Panda ships with the following sizing tokens by default, in addition with the values from the default Panda
+[spacing](#spacing) tokens:
 
 <TokenDocs type="sizing" />
 
@@ -199,4 +198,5 @@ Panda ships with the following keyframes by default:
 
 ## Minimal setup
 
-If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guides/minimal-setup)
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it
+[here](/docs/guides/minimal-setup)
