--- a/website/content/docs/customization/utilities.mdx
+++ b/website/content/docs/customization/utilities.mdx
@@ -1,12 +1,11 @@
 ---
 title: Utilities
-description: The utility API is a way to create your own CSS properties, map existing properties to a set of values or tokens.
+description:
+  The utility API is a way to create your own CSS properties, map existing properties to a set of values or tokens.
 ---
 
-# Utilities
-
-The utility API is a way to create your own CSS properties, map existing properties to a set of values or tokens. It's
-like building your own typesafe version of Chakra UI, Tailwind (in JS), or Styled System.
+The utility API enables you to create custom CSS properties and map existing properties to specific values or tokens.
+It's like building your own type-safe version of Chakra UI, Tailwind (in JS), or Styled System.
 
 Panda comes with a set of utilities out of the box. You can customize them, or add your own.
 
@@ -173,4 +172,5 @@ export default defineConfig({
 
 ## Minimal setup
 
-If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guides/minimal-setup)
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it
+[here](/docs/guides/minimal-setup)
