--- a/website/content/docs/installation/qwik.mdx
+++ b/website/content/docs/installation/qwik.mdx
@@ -3,9 +3,7 @@ title: Using Qwik
 description: Easily use Panda with Qwik with our dedicated integration.
 ---
 
-# Using Panda CSS with Qwik
-
-Setting up Panda CSS in a Qwik project using PostCSS.
+Learn how to set up Panda CSS in a Qwik project using PostCSS.
 
 ## Start a new project
 
@@ -126,7 +124,8 @@ export default component$(() => {
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
