--- a/website/content/docs/overview/browser-support.mdx
+++ b/website/content/docs/overview/browser-support.mdx
@@ -3,15 +3,13 @@ title: Browser Support
 description: Learn about the browser support for Panda
 ---
 
-# Browser Support
-
 Panda CSS is built with modern CSS features and uses [PostCSS](https://postcss.org/) to add support for older browsers.
-
 Panda supports the latest, stable releases of major browsers that support the following features:
 
 - [CSS Variables](https://caniuse.com/css-variables)
 - [CSS Cascade Layers](https://caniuse.com/css-cascade-layers)
-- Modern selectors, such as [:where()](https://caniuse.com/mdn-css_selectors_where) and [:is()](https://caniuse.com/css-matches-pseudo)
+- Modern selectors, such as [`:where()`](https://caniuse.com/mdn-css_selectors_where) and
+  [`:is()`](https://caniuse.com/css-matches-pseudo)
 
 ## Browserlist
 
@@ -34,17 +32,15 @@ Opera >= 73
 
 In event that you need to support older browsers, you can use the following polyfills in your PostCSS config:
 
-- [autoprefixer](https://github.com/postcss/autoprefixer): Adds vendor prefixes to CSS rules using values from [Can I Use](https://caniuse.com/).
-- [postcss-cascade-layers](https://www.npmjs.com/package/@csstools/postcss-cascade-layers): Adds support for CSS Cascade Layers.
+- [autoprefixer](https://github.com/postcss/autoprefixer): Adds vendor prefixes to CSS rules using values from
+  [Can I Use](https://caniuse.com/).
+- [postcss-cascade-layers](https://www.npmjs.com/package/@csstools/postcss-cascade-layers): Adds support for CSS Cascade
+  Layers.
 
 Here is an example of a `postcss.config.js` file that uses these polyfills:
 
 ```js
 module.exports = {
-  plugins: [
-    '@pandacss/dev/postcss',
-    'autoprefixer',
-    '@csstools/postcss-cascade-layers'
-  ]
+  plugins: ['@pandacss/dev/postcss', 'autoprefixer', '@csstools/postcss-cascade-layers']
 }
 ```
