--- a/website/content/docs/overview/getting-started.mdx
+++ b/website/content/docs/overview/getting-started.mdx
@@ -3,28 +3,28 @@ title: Get started with Panda
 description: The universal design system solution for the web
 ---
 
-# Get started with Panda
+Panda is a styling engine that generates styling primitives to author atomic CSS and recipes in a type-safe and readable
+manner.
 
-Panda is a styling engine that generates styling primitives to author atomic CSS and recipes in a type-safe and readable manner.
-
-Panda combines the developer experience of CSS-in-JS and the performance of atomic CSS. It leverages static analysis to scan your JavaScript and TypeScript files for JSX style props and function calls, generating styles on-demand (aka Just-in-Time)
+Panda combines the developer experience of CSS-in-JS and the performance of atomic CSS. It leverages static analysis to
+scan your JavaScript and TypeScript files for JSX style props and function calls, generating styles on-demand (aka
+Just-in-Time)
 
 > TLDR; Panda is a CSS-in-JS engine that generates atomic CSS at build time (via CLI or PostCSS)
-
 
 ## Installation
 
 ### General Guides
 
-- [Panda CLI](/docs/installation/cli):
-  The simplest way to use Panda is with the Panda CLI tool.
+- [Panda CLI](/docs/installation/cli): The simplest way to use Panda is with the Panda CLI tool.
 
-- [Using PostCSS](/docs/installation/postcss): (**Recommended**)
-  Installing Panda as a PostCSS plugin is the recommended way to integrate it with your project.
+- [Using PostCSS](/docs/installation/postcss): (**Recommended**) Installing Panda as a PostCSS plugin is the recommended
+  way to integrate it with your project.
 
 ### Framework Guides
 
-Start using Panda CSS in your JavaScript framework using our framework-specific guides that cover our recommended approach.
+Start using Panda CSS in your JavaScript framework using our framework-specific guides that cover our recommended
+approach.
 
 <FrameworkCards />
 
