--- a/website/content/docs/overview/why-panda.mdx
+++ b/website/content/docs/overview/why-panda.mdx
@@ -1,39 +1,49 @@
 ---
 title: Why Panda
-description: Panda is a powerful styling library that provides developers with primitives to create, organize, and manage CSS styles in a type-safe and readable manner.
+description: From the endless list of CSS-in-JS libraries, why should you choose Panda?
 ---
 
-# The Motivation
-
-From the endless list of CSS-in-JS libraries, why should you choose Panda?
+Runtime CSS-in-JS and style props are powerful features that allow developers to build dynamic UI components that are
+composable, predictable, and easy to use. However, it comes at the cost of performance and runtime.
 
 ## Backstory
 
-Runtime CSS-in-JS and style props are powerful features that allow developers to build dynamic UI components that are composable, predictable, and easy to use. However, it comes at the cost of performance and runtime.
+With the release of Server Components and the rise of server-first frameworks, most existing runtime CSS-in-JS styling
+solutions (like emotion, styled-components) either can't work reliably, or can't work anymore. This new paradigm is a
+huge win for performance, development, and user experience, however, it poses a new "Innovate or Die" challenge for
+CSS-in-JS libraries.
 
-With the release of Server Components and the rise of server-first frameworks, most existing runtime CSS-in-JS styling solutions (like emotion, styled-components) either can't work reliably, or can't work anymore. This new paradigm is a huge win for performance, development, and user experience, however, it poses a new "Innovate or Die" challenge for CSS-in-JS libraries.
-
-> **Fun Fact:** Most CSS-in-JS libraries have a pinned issue on their GitHub repo about "Next app dir" or/and "Server Components" 😅, making the challenge even more obvious.
+> **Fun Fact:** Most CSS-in-JS libraries have a pinned issue on their GitHub repo about "Next app dir" or/and "Server
+> Components" 😅, making the challenge even more obvious.
 
 So, the question is, **is CSS-in-JS dead?** The answer is **no, but it needs to evolve!**
 
 ## The new era of CSS-in-JS
 
-Panda is a new CSS-in-JS engine that aims to solve the challenges of CSS-in-JS in the server-first era. It provides styling primitives to create, organize, and manage CSS styles in a type-safe and readable manner.
+Panda is a new CSS-in-JS engine that aims to solve the challenges of CSS-in-JS in the server-first era. It provides
+styling primitives to create, organize, and manage CSS styles in a type-safe and readable manner.
 
-- **Static Analysis:** Panda uses static analysis to parse and analyze your styles at build time, and generate CSS files that can be used in any JavaScript framework.
+- **Static Analysis:** Panda uses static analysis to parse and analyze your styles at build time, and generate CSS files
+  that can be used in any JavaScript framework.
 
-- **PostCSS:** After static analysis, Panda uses a set of PostCSS plugins to convert the parsed data to atomic css at build time. **This makes Panda compatible with any framework that supports PostCSS.**
+- **PostCSS:** After static analysis, Panda uses a set of PostCSS plugins to convert the parsed data to atomic css at
+  build time. **This makes Panda compatible with any framework that supports PostCSS.**
 
-- **Codegen:** Panda generates a lightweight runtime JS code that is used to author styles. **Think of it as an optimized function that joins key-value pairs of an object**. It doesn't generate styles in the browser nor inject styles in the `<head>`.
+- **Codegen:** Panda generates a lightweight runtime JS code that is used to author styles. **Think of it as an
+  optimized function that joins key-value pairs of an object**. It doesn't generate styles in the browser nor inject
+  styles in the `<head>`.
 
-- **Type-Safety:** Panda combines `csstype` and auto-generated typings to provide type-safety for css properties and design tokens.
+- **Type-Safety:** Panda combines `csstype` and auto-generated typings to provide type-safety for css properties and
+  design tokens.
 
-- **Performance:** Panda uses a unique approach to generate atomic CSS files that are optimized for performance and readability.
+- **Performance:** Panda uses a unique approach to generate atomic CSS files that are optimized for performance and
+  readability.
 
-- **Developer Experience:** Panda provides a great developer experience with a rich set of features like recipes, patterns, design tokens, JSX style props, and more.
+- **Developer Experience:** Panda provides a great developer experience with a rich set of features like recipes,
+  patterns, design tokens, JSX style props, and more.
 
-- **Modern CSS**: Panda uses modern CSS features like cascade layers, css variables, modern selectors like `:where` and `:is` in generated styles.
+- **Modern CSS**: Panda uses modern CSS features like cascade layers, css variables, modern selectors like `:where` and
+  `:is` in generated styles.
 
 ## When to use Panda?
 
@@ -59,12 +69,8 @@ function App() {
       <div className={circle({ size: '5rem', overflow: 'hidden' })}>
         <img src="https://via.placeholder.com/150" alt="avatar" />
       </div>
-      <div className={css({ mt: '4', fontSize: 'xl', fontWeight: 'semibold' })}>
-        John Doe
-      </div>
-      <div className={css({ mt: '2', fontSize: 'sm', color: 'gray.600' })}>
-        john@doe.com
-      </div>
+      <div className={css({ mt: '4', fontSize: 'xl', fontWeight: 'semibold' })}>John Doe</div>
+      <div className={css({ mt: '2', fontSize: 'sm', color: 'gray.600' })}>john@doe.com</div>
     </div>
   )
 }
@@ -74,7 +80,8 @@ function App() {
 
 ### Token generator
 
-Panda has first-class support for design tokens. It provides a way to express raw and semantic tokens for your project. The generator can be used to create a set of CSS variables for your design tokens.
+Panda has first-class support for design tokens. It provides a way to express raw and semantic tokens for your project.
+The generator can be used to create a set of CSS variables for your design tokens.
 
 ```ts filename="panda.config.ts"
 export default defineConfig({
@@ -132,4 +139,5 @@ Panda isn't the right fit for your project if:
 - You're using a template-based framework like PHP.
 - You're looking for an absolute zero JS solution.
 
-In these scenarios, we recommend that you use vanilla CSS (which is getting awesome by the day), or other utility based CSS libraries.
+In these scenarios, we recommend that you use vanilla CSS (which is getting awesome by the day), or other utility based
+CSS libraries.
