--- a/website/content/docs/utilities/background.mdx
+++ b/website/content/docs/utilities/background.mdx
@@ -1,11 +1,10 @@
 ---
 title: Background
-description: Panda provides the following utilities or style properties for styling background colors, gradients, and images.
+description:
+  Panda provides the following utilities or style properties for styling background colors, gradients, and images.
 ---
 
-# Background
-
-Panda provides the following utilities or style properties for styling background colors, gradients, and images.
+Use these utilities to style background colors, gradients, and images.
 
 ## Background Colors
 
