--- a/website/content/docs/utilities/border.mdx
+++ b/website/content/docs/utilities/border.mdx
@@ -3,9 +3,7 @@ title: Border
 description: Panda's border utilities.
 ---
 
-# Border
-
-Panda provides the css properties for styling borders.
+Panda provides CSS properties for styling borders.
 
 ## Compound Properties
 
@@ -30,7 +28,8 @@ The border compound property maps to the `borders` token category.
 
 ### Specific sides
 
-Use the `border{Left|Right|Top|Bottom}Radius` properties, or the shorthand equivalent to apply border radius on a specific side of an element.
+Use the `border{Left|Right|Top|Bottom}Radius` properties, or the shorthand equivalent to apply border radius on a
+specific side of an element.
 
 ```jsx
 <div className={css({ borderTopRadius: 'md' })} />
@@ -63,7 +62,8 @@ Use the `border{Top|Bottom}{Left|Right}Radius` properties, or the shorthand equi
 
 ### Logical Properties
 
-Panda also provides the logical properties for border radius, which map to corresponding physical properties based on the document's writing mode.
+Panda also provides the logical properties for border radius, which map to corresponding physical properties based on
+the document's writing mode.
 
 > For example, `borderStartRadius` will map to `border-left-radius` in LTR mode, and `border-right-radius` in RTL mode.
 
@@ -110,7 +110,8 @@ Use the `border{Left|Right|Top|Bottom}Width` properties, to apply border width o
 
 ### Logical Properties
 
-Panda also provides the logical properties for border width, which map to corresponding physical properties based on the document's writing mode.
+Panda also provides the logical properties for border width, which map to corresponding physical properties based on the
+document's writing mode.
 
 > For example, `borderStartWidth` will map to `border-left-width` in LTR mode, and `border-right-width` in RTL mode.
 
@@ -152,9 +153,11 @@ Use the `border{Left|Right|Top|Bottom}Color` properties to apply border color on
 
 ### Logical Properties
 
-Panda also provides the logical properties for border color, which map to corresponding physical properties based on the document's writing mode.
+Panda also provides the logical properties for border color, which map to corresponding physical properties based on the
+document's writing mode.
 
-> For example, `borderInlineStartColor` will map to `border-left-color` in LTR mode, and `border-right-color` in RTL mode.
+> For example, `borderInlineStartColor` will map to `border-left-color` in LTR mode, and `border-right-color` in RTL
+> mode.
 
 ```jsx
 <div className={css({ borderInlineStartColor: 'red.500' })} />
