--- a/website/content/docs/utilities/display.mdx
+++ b/website/content/docs/utilities/display.mdx
@@ -3,9 +3,7 @@ title: Display
 description: Panda provides style properties for styling display of an element
 ---
 
-# Display
-
-Panda provides the following utilities or style properties for styling display of an element.
+Panda provides utilities and style properties for styling display of an element.
 
 ## Display Property
 
