--- a/website/content/docs/utilities/divide.mdx
+++ b/website/content/docs/utilities/divide.mdx
@@ -3,9 +3,7 @@ title: Divide
 description: Panda provides style properties for for dividing elements
 ---
 
-# Divide
-
-Panda provides the following utilities or style properties for dividing elements.
+Panda provides utilities and style properties for dividing elements.
 
 ## Divide X
 
