--- a/website/content/docs/utilities/effects.mdx
+++ b/website/content/docs/utilities/effects.mdx
@@ -3,9 +3,8 @@ title: Effects
 description: Panda provides utilities or style properties for applying various visual effects to elements.
 ---
 
-# Effects
-
-Panda offers a range of utilities or style properties for applying visual effects to elements. These effects include opacity, shadows, blending modes, filters, and more.
+Panda offers a range of utilities and style properties for applying visual effects to elements. These effects include
+opacity, shadows, blending modes, filters, and more.
 
 ## Opacity
 
