--- a/website/content/docs/utilities/flex-and-grid.mdx
+++ b/website/content/docs/utilities/flex-and-grid.mdx
@@ -1,11 +1,12 @@
 ---
 title: Flex and Grid
-description: Panda provides a set of utilities and style properties for flexible box layout (Flex) and grid layout (Grid). These utilities are designed to make it easy to create responsive and dynamic layouts in your application.
+description:
+  Panda provides a set of utilities and style properties for flexible box layout (Flex) and grid layout (Grid). These
+  utilities are designed to make it easy to create responsive and dynamic layouts in your application.
 ---
 
-# Flex and Grid
-
-Panda provides a set of utilities and style properties for flexible box layout (Flex) and grid layout (Grid). These utilities are designed to make it easy to create responsive and dynamic layouts in your application.
+Panda provides a set of utilities and style properties for flexible box layout (Flex) and grid layout (Grid). These
+utilities are designed to make it easy to create responsive and dynamic layouts in your application.
 
 ## Flex
 
@@ -13,7 +14,8 @@ Flex utilities are designed to control the layout and behavior of flex container
 
 ### Flex Basis
 
-The `flexBasis` utility sets the initial main size of a flex item, distributing the available space along the main axis. It supports `spacing` tokens and fractional literal values like “1/2”, “2/3", etc.
+The `flexBasis` utility sets the initial main size of a flex item, distributing the available space along the main axis.
+It supports `spacing` tokens and fractional literal values like “1/2”, “2/3", etc.
 
 ```jsx
 <div className={css({ basis: '1/2' })} />
@@ -21,8 +23,7 @@ The `flexBasis` utility sets the initial main size of a flex item, distributing 
 
 ### Flex
 
-The `flex` utility defines the flexibility of a flex container or item.
-Supported values:
+The `flex` utility defines the flexibility of a flex container or item. Supported values:
 
 | Value     |            |
 | --------- | ---------- |
@@ -41,7 +42,8 @@ The `flexDirection` utility sets the direction of the main axis in a flex contai
 
 ## Grid
 
-Grid utilities offer control over various grid layout properties, providing a powerful system for creating layouts with rows and columns.
+Grid utilities offer control over various grid layout properties, providing a powerful system for creating layouts with
+rows and columns.
 
 ### Grid Template Columns
 
