--- a/website/content/docs/utilities/layout.mdx
+++ b/website/content/docs/utilities/layout.mdx
@@ -3,9 +3,7 @@ title: Layout
 description: Panda provides style properties for styling layout of an element
 ---
 
-# Layout
-
-Panda provides style properties for styling layout of an element
+Panda provides style properties for styling layout of an element.
 
 ## Aspect Ratio
 
@@ -17,7 +15,8 @@ Values can reference the `aspectRatios` token category.
 <div className={css({ aspectRatio: 'square' })} />
 ```
 
-> This uses the native CSS property `aspect-ratio` which is might not supported in all browsers. Consider using the [`AspectRatio` pattern](/docs/concepts/patterns#aspect-ratio) instead
+> This uses the native CSS property `aspect-ratio` which is might not supported in all browsers. Consider using the
+> [`AspectRatio` pattern](/docs/concepts/patterns#aspect-ratio) instead
 
 ## Position
 
@@ -64,7 +63,8 @@ Use the `inset{Start|End}` utilities to set the position of an element based on 
 
 ## Container Query
 
-You can define container names and sizes in your theme configuration and use them in your styles. [Read more.](/docs/concepts/conditional-styles#container-queries)
+You can define container names and sizes in your theme configuration and use them in your styles.
+[Read more.](/docs/concepts/conditional-styles#container-queries)
 
 | Prop            | CSS Property    | Token Category   |
 | --------------- | --------------- | ---------------- |
