--- a/website/content/docs/utilities/typography.mdx
+++ b/website/content/docs/utilities/typography.mdx
@@ -3,9 +3,7 @@ title: Typography
 description: Panda's typography utilities.
 ---
 
-# Typography
-
-Panda provides the following utilities or style properties for styling text.
+Panda provides utilities and style properties for styling text.
 
 ## Font Properties
 
