--- a/website/content/docs/concepts/responsive-design.mdx
+++ b/website/content/docs/concepts/responsive-design.mdx
@@ -3,11 +3,11 @@ title: Responsive Design
 description: How to write mobile responsive designs in your CSS in Panda
 ---
 
-# Responsive Design
+Responsive design is a fundamental aspect of modern web development, allowing websites and applications to adapt
+seamlessly to different screen sizes and devices.
 
-Responsive design is a fundamental aspect of modern web development, allowing websites and applications to adapt seamlessly to different screen sizes and devices.
-
-Panda provides a comprehensive set of responsive utilities and features to facilitate the creation of responsive layouts. It lets you do this through conditional styles for different breakpoints.
+Panda provides a comprehensive set of responsive utilities and features to facilitate the creation of responsive
+layouts. It lets you do this through conditional styles for different breakpoints.
 
 Let's say you want to change the font weight of a text on large screens, you can do it like this:
 
@@ -22,7 +22,8 @@ Let's say you want to change the font weight of a text on large screens, you can
 </span>
 ```
 
-> Panda uses a mobile-first breakpoint system and leverages min-width media queries `@media(min-width)` when you write responsive styles.
+> Panda uses a mobile-first breakpoint system and leverages min-width media queries `@media(min-width)` when you write
+> responsive styles.
 
 Panda provides five breakpoints by default:
 
@@ -56,7 +57,8 @@ Panda allows you apply the responsive condition directly to a style property, re
 
 ### The Array syntax
 
-Panda also accepts arrays as values for responsive styles. Pass the corresponding value for each breakpoint in the array. Using our previous code as an example:
+Panda also accepts arrays as values for responsive styles. Pass the corresponding value for each breakpoint in the
+array. Using our previous code as an example:
 
 ```jsx
 <span
@@ -72,9 +74,12 @@ Panda also accepts arrays as values for responsive styles. Pass the correspondin
 
 ### Targeting a breakpoint range
 
-By default, styles assigned to a specific breakpoint will be effective at that breakpoint and will persist as applied styles at larger breakpoints.
+By default, styles assigned to a specific breakpoint will be effective at that breakpoint and will persist as applied
+styles at larger breakpoints.
 
-If you wish to apply a utility exclusively when a particular range of breakpoints is active, Panda offers properties that restrict the style to that specific range. To construct the property, combine the minimum and maximum breakpoints using the "To" notation in camelCase format.
+If you wish to apply a utility exclusively when a particular range of breakpoints is active, Panda offers properties
+that restrict the style to that specific range. To construct the property, combine the minimum and maximum breakpoints
+using the "To" notation in camelCase format.
 
 Let's say we want to apply styles between the `md` and `xl` breakpoints, we use the `mdToXl` property:
 
@@ -92,7 +97,8 @@ Let's say we want to apply styles between the `md` and `xl` breakpoints, we use 
 
 ### Targeting a single breakpoint
 
-To target a single breakpoint, you can easily achieve this by simply adding the suffix "Only" to the breakpoint name in camelCase format.
+To target a single breakpoint, you can easily achieve this by simply adding the suffix "Only" to the breakpoint name in
+camelCase format.
 
 Let's say we want to apply styles only in the `lg` breakpoint, we use the `lgOnly` property:
 
@@ -108,11 +114,15 @@ Let's say we want to apply styles only in the `lg` breakpoint, we use the `lgOnl
 
 ### Customizing Breakpoints
 
-When encountering certain scenarios, it may become necessary to establish custom breakpoints tailored to your application's needs. It is advisable to utilize commonly used aliases such as `sm`, `md`, `lg`, and `xl` for this purpose.
+When encountering certain scenarios, it may become necessary to establish custom breakpoints tailored to your
+application's needs. It is advisable to utilize commonly used aliases such as `sm`, `md`, `lg`, and `xl` for this
+purpose.
 
-In order to define custom breakpoints, you can easily accomplish this by passing them as an object within your Panda config.
+In order to define custom breakpoints, you can easily accomplish this by passing them as an object within your Panda
+config.
 
-> Note: Make sure that the CSS units of your breakpoints are consistent. Use either all pixels (`px`) or all `em`, but do not mix them.
+> Note: Make sure that the CSS units of your breakpoints are consistent. Use either all pixels (`px`) or all `em`, but
+> do not mix them.
 
 ```js filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -135,4 +145,5 @@ export default defineConfig({
 
 ### Hiding elements by breakpoint
 
-If you need to limit the visibility of an element to any breakpoint, Panda provides [display utilities](/docs/utilities/display) to help you achieve this.
+If you need to limit the visibility of an element to any breakpoint, Panda provides
+[display utilities](/docs/utilities/display) to help you achieve this.
