--- a/website/content/docs/concepts/slot-recipes.mdx
+++ b/website/content/docs/concepts/slot-recipes.mdx
@@ -3,9 +3,8 @@ title: Slot Recipes
 description: Learn how to style multiple parts components with slot recipes.
 ---
 
-# Slot Recipes
-
-Slot Recipes come in handy when you need to apply style variations to multiple parts of a component. While using `cva` or `defineRecipe` might be enough for simple cases, slot recipes are a better fit for more complex cases.
+When using `cva` or `defineRecipe` might be enough for simple cases, slot recipes are a better fit for more complex
+cases.
 
 A slot recipe consists of these properties:
 
@@ -15,14 +14,17 @@ A slot recipe consists of these properties:
 - `defaultVariants`: The default variant for the component
 - `compoundVariants`: The compound variant combination and style overrides for each slot.
 
-> **Credit:** This API was inspired by multipart components in [Chakra UI](https://chakra-ui.com/docs/styled-system/component-style) and slot variants in [Tailwind Variants](https://tailwind-variants.org)
+> **Credit:** This API was inspired by multipart components in
+> [Chakra UI](https://chakra-ui.com/docs/styled-system/component-style) and slot variants in
+> [Tailwind Variants](https://tailwind-variants.org)
 
 [See the comparison table between atomic recipes (`cva`) and `config recipes` here.](/docs/concepts/recipes#should-i-use-atomic-or-config-recipes-)
 The same comparison applies to `sva` and `slot recipes`.
 
 ## Atomic Slot Recipe (or sva)
 
-The `sva` function is a shorthand for creating a slot recipe with atomic variants. It takes the same arguments as `cva` but returns a slot recipe instead.
+The `sva` function is a shorthand for creating a slot recipe with atomic variants. It takes the same arguments as `cva`
+but returns a slot recipe instead.
 
 ### Defining the Recipe
 
@@ -75,7 +77,8 @@ const Checkbox = () => {
 }
 ```
 
-When a slot recipe is created, Panda will pre-generate the css of all the possible combinations of variants and compound variants as atomic classes.
+When a slot recipe is created, Panda will pre-generate the css of all the possible combinations of variants and compound
+variants as atomic classes.
 
 ```css
 @layer utilities {
@@ -122,7 +125,8 @@ When a slot recipe is created, Panda will pre-generate the css of all the possib
 
 Compound variants are a way to apply style overrides to a slot based on the combination of variants.
 
-Let's say you want to apply a different border color to the checkbox control based on its `size` and the `isChecked` variant, here's how to do it:
+Let's say you want to apply a different border color to the checkbox control based on its `size` and the `isChecked`
+variant, here's how to do it:
 
 ```jsx filename="checkbox.recipe.ts" {14-22}
 import { sva } from '../styled-system/css'
@@ -157,7 +161,8 @@ You can set an optional `className` property in the `sva` config which can be us
 
 > Each slot will contain a `${className}__${slotName}` class in addition to the atomic styles.
 
-Let's say you want to apply a different border color to the button text directly from the `root` slot. Here's how you would do it:
+Let's say you want to apply a different border color to the button text directly from the `root` slot. Here's how you
+would do it:
 
 ```tsx
 import { sva } from '../styled-system/css'
@@ -179,7 +184,8 @@ const button = sva({
 })
 ```
 
-> Note: This doesn't work when you have the `hash: true` option in your panda config. We recommend using `data-x` selectors to target slots.
+> Note: This doesn't work when you have the `hash: true` option in your panda config. We recommend using `data-x`
+> selectors to target slots.
 
 ### TypeScript Guide
 
@@ -198,7 +204,8 @@ export type CheckboxVariants = RecipeVariantProps<typeof checkbox>
 
 ### Usage in JSX
 
-Unlike the atomic recipe or `cva`, slot recipes are not meant to be used directly in the `styled` factory since it returns an object of classes instead of a single class.
+Unlike the atomic recipe or `cva`, slot recipes are not meant to be used directly in the `styled` factory since it
+returns an object of classes instead of a single class.
 
 ```jsx
 import { css } from '../styled-system/css'
@@ -223,9 +230,11 @@ const Checkbox = (props: CheckboxVariants) => {
 
 ### Styling JSX Compound Components
 
-Compound components are a great way to create reusable components for better composition. Slot recipes play nicely with this pattern and requires a context provider for the component.
+Compound components are a great way to create reusable components for better composition. Slot recipes play nicely with
+this pattern and requires a context provider for the component.
 
-> **Note:** This is an advanced topic and you don't need to understand it to use slot recipes. If you use React, be aware that context require adding 'use client' to the top of the file.
+> **Note:** This is an advanced topic and you don't need to understand it to use slot recipes. If you use React, be
+> aware that context require adding 'use client' to the top of the file.
 
 Let's say you want to design a Checkbox component that can be used like this:
 
@@ -274,7 +283,9 @@ export const createStyleContext = recipe => {
 }
 ```
 
-> Note: For the TypeScript version of this file, refer to [create-style-context.tsx](https://github.com/cschroeter/park-ui/blob/main/website/src/lib/create-style-context.tsx) in Park UI
+> Note: For the TypeScript version of this file, refer to
+> [create-style-context.tsx](https://github.com/cschroeter/park-ui/blob/main/website/src/lib/create-style-context.tsx)
+> in Park UI
 
 Then, use the context to create compound components connected to the recipe
 
@@ -296,7 +307,8 @@ const Checkbox = { Root, Control, Label }
 
 ## Config Slot Recipe
 
-Config slot recipes are very similar atomic recipes except that they use well-defined classNames and store the styles in the `recipes` cascade layer.
+Config slot recipes are very similar atomic recipes except that they use well-defined classNames and store the styles in
+the `recipes` cascade layer.
 
 The config slot recipe takes the following additional properties:
 
@@ -387,7 +399,8 @@ const Checkbox = () => {
 }
 ```
 
-The generated css is registered under the `recipe` [cascade layer](/docs/concepts/cascade-layers.mdx) with the class name that matches the recipe-slot-variant name pattern `<recipe-className>__<slot-name>--<variant-name>`.
+The generated css is registered under the `recipe` [cascade layer](/docs/concepts/cascade-layers.mdx) with the class
+name that matches the recipe-slot-variant name pattern `<recipe-className>__<slot-name>--<variant-name>`.
 
 ```css
 @layer recipes {
@@ -430,7 +443,8 @@ The generated css is registered under the `recipe` [cascade layer](/docs/concept
 
 ### TypeScript Guide
 
-Every slot recipe ships a type interface for its accepted variants. You can import them from the `styled-system/recipes` entrypoint.
+Every slot recipe ships a type interface for its accepted variants. You can import them from the `styled-system/recipes`
+entrypoint.
 
 For the checkbox recipe, we can import the `CheckboxVariants` type like so:
 
@@ -447,7 +461,8 @@ type CheckboxProps = CheckboxVariants & {
 
 ### `defineParts`
 
-It can be useful when you want to have the equivalent of a slot recipe without needing to split the class names bindings and instead just having a className that handles children on 1 DOM element.
+It can be useful when you want to have the equivalent of a slot recipe without needing to split the class names bindings
+and instead just having a className that handles children on 1 DOM element.
 
 It pairs well with [ZagJs](https://zagjs.com/) and [Ark-UI](https://ark-ui.com/)
 
