--- a/website/content/docs/concepts/style-props.mdx
+++ b/website/content/docs/concepts/style-props.mdx
@@ -1,13 +1,13 @@
 ---
 title: Style props
-description: Style props lets you quickly build UI components in JSX by passing css properties as "props" to your components.
+description:
+  Style props lets you quickly build UI components in JSX by passing css properties as "props" to your components.
 ---
 
-# Style props
+Panda will extract the style props through static analysis and generate the CSS at build time.
 
-Style props lets you quickly build UI components in JSX by passing css properties as "props" to your components. Panda will extract the style props through static analysis and generate the CSS at build time.
-
-While you can get very far by using the `className` prop and function from Panda, style props provide a more ergonomic way of expressing styles.
+While you can get very far by using the `className` prop and function from Panda, style props provide a more ergonomic
+way of expressing styles.
 
 If you use Chakra UI, Styled System, or Theme UI, you'll feel right at home right away 😊
 
@@ -40,13 +40,16 @@ const Button = ({ children }) => (
 
 ## Configure JSX
 
-Using JSX style props is turned off by default in Panda, but you can opt-in to this feature by using the `jsxFramework` property in the panda config.
+Using JSX style props is turned off by default in Panda, but you can opt-in to this feature by using the `jsxFramework`
+property in the panda config.
 
-> ⚠️ Panda will not extract style props from JSX elements if you don't set the `jsxFramework` property. This is to avoid unnecessary work for projects that don't use JSX.
+> ⚠️ Panda will not extract style props from JSX elements if you don't set the `jsxFramework` property. This is to avoid
+> unnecessary work for projects that don't use JSX.
 
 ### Choose Framework
 
-JSX is a JavaScript syntax extension that allows you to write HTML-like code directly within your JavaScript code and is supported by most popular frameworks. Panda supports JSX style props in React, Preact, Vue 3, Qwik and Solid.js.
+JSX is a JavaScript syntax extension that allows you to write HTML-like code directly within your JavaScript code and is
+supported by most popular frameworks. Panda supports JSX style props in React, Preact, Vue 3, Qwik and Solid.js.
 
 ```js filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -107,9 +110,7 @@ const Button = ({ children }) => (
 
 ### Property Renaming
 
-<Callout type="warning">
-  Due to the static nature of Panda, you can't rename properties at runtime.
-</Callout>
+<Callout type="warning">Due to the static nature of Panda, you can't rename properties at runtime.</Callout>
 
 ```tsx filename="App.tsx"
 import { Circle, CircleProps } from '../styled-system/jsx'
@@ -141,29 +142,28 @@ const App = () => {
 The same principles apply to all style props, recipe variants, and pattern props.
 
 <Callout type="info">
-  If you still need to rename properties at runtime, you can use
-  `config.staticCss` as an escape-hatch to pre-generate the CSS anyway for the
-  properties you need.
+  If you still need to rename properties at runtime, you can use `config.staticCss` as an escape-hatch to pre-generate
+  the CSS anyway for the properties you need.
 </Callout>
 
 ### Recipe
 
-You can use recipe variants as JSX props to quickly change the styles of your components, as long as [you're tracking those components in your recipe config](/docs/concepts/recipes#advanced-jsx-tracking).
+You can use recipe variants as JSX props to quickly change the styles of your components, as long as
+[you're tracking those components in your recipe config](/docs/concepts/recipes#advanced-jsx-tracking).
 
 ```tsx
 import { styled } from '../styled-system/jsx'
 import { button, type ButtonVariantProps } from '../styled-system/recipes'
 
-const Button = (props: ButtonVariantProps) => (
-  <button className={button(props)}>Button</button>
-)
+const Button = (props: ButtonVariantProps) => <button className={button(props)}>Button</button>
 
 const App = () => <Button variant="secondary">Button</Button>
 ```
 
 ## Factory Function
 
-You can also use the `styled` function to create a styled component from any component or JSX intrinsic element (like "a", "button").
+You can also use the `styled` function to create a styled component from any component or JSX intrinsic element (like
+"a", "button").
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -178,11 +178,13 @@ const App = () => (
 )
 ```
 
-> You can configure the `styled` function name using the [`config.jsxFactory`](/docs/references/config#jsxfactory) option.
+> You can configure the `styled` function name using the [`config.jsxFactory`](/docs/references/config#jsxfactory)
+> option.
 
 ### Factory Recipe
 
-You can define a recipe for your component using the `styled` function. This is useful when you want to create a component that has a specific set of style props.
+You can define a recipe for your component using the `styled` function. This is useful when you want to create a
+component that has a specific set of style props.
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -228,7 +230,8 @@ interface FactoryOptions<TProps extends Dict> {
 
 #### `dataAttr`
 
-Setting `dataAttr` to true will add a `data-recipe="{recipeName}"` attribute to the element with the recipe name. This is useful for testing and debugging.
+Setting `dataAttr` to true will add a `data-recipe="{recipeName}"` attribute to the element with the recipe name. This
+is useful for testing and debugging.
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -236,17 +239,14 @@ import { button } from '../styled-system/recipes'
 
 const Button = styled('button', button, { dataAttr: true })
 
-const App = () => (
-  <Button variant="secondary">
-    Button
-  </Button>
-)
+const App = () => <Button variant="secondary">Button</Button>
 // => <button data-recipe="button" class="btn btn--variant_purple">Button</button>
 ```
 
 #### `defaultProps`
 
-allows you to skip writing wrapper components just to set a few props. It also allows you to locall override the default variants or base styles of a recipe.
+allows you to skip writing wrapper components just to set a few props. It also allows you to locall override the default
+variants or base styles of a recipe.
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -265,7 +265,8 @@ const App = () => <Button>Button</Button>
 
 #### `shouldForwardProp`
 
-Used to customize which props are forwarded to the underlying element. By default, all props except recipe variants and style props are forwarded.
+Used to customize which props are forwarded to the underlying element. By default, all props except recipe variants and
+style props are forwarded.
 
 For example, you could use it to integrate with [Framer Motion](https://www.framer.com/motion/).
 
@@ -279,15 +280,15 @@ const StyledMotion = styled(
   {},
   {
     shouldForwardProp: (prop, variantKeys) =>
-      isValidMotionProp(prop) ||
-      (!variantKeys.includes(prop) && !isCssProperty(prop))
+      isValidMotionProp(prop) || (!variantKeys.includes(prop) && !isCssProperty(prop))
   }
 )
 ```
 
 ### Unstyled prop
 
-All styled components accept an `unstyled` prop that allows you to disable the recipe styles. This is useful when you want to use a component's structure but apply completely custom styling.
+All styled components accept an `unstyled` prop that allows you to disable the recipe styles. This is useful when you
+want to use a component's structure but apply completely custom styling.
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -299,7 +300,7 @@ const App = () => (
   <>
     {/* With recipe styles */}
     <Button>Styled Button</Button>
-    
+
     {/* Without recipe styles, but inline styles still work */}
     <Button unstyled bg="red.500" color="white">
       Unstyled Button
@@ -308,10 +309,10 @@ const App = () => (
 )
 ```
 
-
 ### Reducing the allowed style props
 
-You can reduce the allowed JSX properties on the factory using [`config.jsxStyleProps`](/docs/references/config#jsxstyleprops):
+You can reduce the allowed JSX properties on the factory using
+[`config.jsxStyleProps`](/docs/references/config#jsxstyleprops):
 
 - When set to 'all', all style props are allowed.
 - When set to 'minimal', only the `css` prop is allowed.
@@ -319,11 +320,13 @@ You can reduce the allowed JSX properties on the factory using [`config.jsxStyle
   - `<styled.div />` and `styled("div")` aren't valid
   - but the recipe usage is still valid `styled("div", { base: { color: "red.300" }, variants: { ...} })`
 
-> Removing style props (from `all` to either `minimal` or `none`) will reduce the size of the generated code due to not having to check which props are style props at runtime.
+> Removing style props (from `all` to either `minimal` or `none`) will reduce the size of the generated code due to not
+> having to check which props are style props at runtime.
 
 ## JSX Patterns
 
-Patterns are common layout patterns like `stack`, `grid`, `circle` that can be used to speed up your css. Think of them as a way to avoid repetitive layout styles.
+Patterns are common layout patterns like `stack`, `grid`, `circle` that can be used to speed up your css. Think of them
+as a way to avoid repetitive layout styles.
 
 All the patterns provided by Panda are available as JSX components.
 
@@ -335,14 +338,17 @@ import { Stack, Circle } from '../styled-system/jsx'
 const App = () => (
   <Stack gap="4" align="flex-start">
     <button>Button</button>
-    <Circle size="4" bg="red.300">4</Circle>
+    <Circle size="4" bg="red.300">
+      4
+    </Circle>
   </Stack>
 )
 ```
 
 ## Making your own styled components
 
-To make a custom JSX component that accepts style props, Use the `splitCssProps` function to split style props from other component props.
+To make a custom JSX component that accepts style props, Use the `splitCssProps` function to split style props from
+other component props.
 
 > For this to work correctly, set the `jsxFramework` to the framework you're using in your panda config.
 
@@ -354,11 +360,7 @@ export function Component(props: HTMLStyledProps<'div'>) {
   const [cssProps, restProps] = splitCssProps(props)
   const { css: cssProp, ...styleProps } = cssProps
 
-  const className = css(
-    { display: 'flex', height: '20', width: '20' },
-    styleProps,
-    cssProp
-  )
+  const className = css({ display: 'flex', height: '20', width: '20' }, styleProps, cssProp)
 
   return <div {...restProps} className={className} />
 }
