--- a/website/content/docs/guides/debugging.mdx
+++ b/website/content/docs/guides/debugging.mdx
@@ -3,11 +3,10 @@ title: Debugging
 description: How can I debug my styles or profile the extraction process?
 ---
 
-# Debugging
-
 ## panda debug
 
-Panda comes with a built-in debug command to help you debug your app. This can be useful to see which files are being processed, what styles are being generated for each of your source files, and what your final config looks like.
+Panda's built-in debug command helps you see which files are processed, what styles are generated, and your final
+config.
 
 By default it will scan and output debug files for the entire project depending on your `include` and `exclude` options
 from your config file.
@@ -65,9 +64,11 @@ This would generate a `debug` folder in your `config.outdir` folder with the fol
   </FileTree.Folder>
 </FileTree>
 
-The `config.json` file will contain the resolved config result, meaning the output after merging config presets in your own specific options.
+The `config.json` file will contain the resolved config result, meaning the output after merging config presets in your
+own specific options.
 
-It can be useful to check if your config contains everything you expect for your app to be working, such as tokens or recipes.
+It can be useful to check if your config contains everything you expect for your app to be working, such as tokens or
+recipes.
 
 `*.ast.json` files will look like:
 
@@ -114,7 +115,8 @@ You can prefix any of the Panda CLI command with the `PANDA_DEBUG` environment v
 PANDA_DEBUG=* pnpm panda
 ```
 
-This can be useful to check if a specific file is being processed or not, or if a specific function/component has been extracted.
+This can be useful to check if a specific file is being processed or not, or if a specific function/component has been
+extracted.
 
 ```
 ❯ PANDA_DEBUG=* pnpm panda cssgen
@@ -139,10 +141,12 @@ This can be useful to check if a specific file is being processed or not, or if 
 
 ## Performance profiling
 
-If Panda is taking too long to process your files, you can use the `--cpu-prof` with the `panda`, `panda cssgen`, `panda codegen` and `panda debug` commands to generate a flamegraph of the whole process, which will allow you (or us as maintainers) to see which part of the process is taking the most time.
+If Panda is taking too long to process your files, you can use the `--cpu-prof` with the `panda`, `panda cssgen`,
+`panda codegen` and `panda debug` commands to generate a flamegraph of the whole process, which will allow you (or us as
+maintainers) to see which part of the process is taking the most time.
 
-This will generate a `panda-{command}-{timestamp}.cpuprofile` file in
-the current working directory, which can be opened in tools like [Speedscope](https://www.speedscope.app/)
+This will generate a `panda-{command}-{timestamp}.cpuprofile` file in the current working directory, which can be opened
+in tools like [Speedscope](https://www.speedscope.app/)
 
 ```bash
 pnpm panda --cpu-prof
@@ -152,14 +156,18 @@ pnpm panda --cpu-prof
 
 ### Why are my styles not applied?
 
-Check that the [`@layer` rules](/docs/concepts/cascade-layers#layer-css) are set and the corresponding `.css` file is included. [If you're not using `postcss`](/docs/installation/cli), ensure that `styled-system/styles.css` is imported and that the `panda` command has been run (or is running with `--watch`).
+Check that the [`@layer` rules](/docs/concepts/cascade-layers#layer-css) are set and the corresponding `.css` file is
+included. [If you're not using `postcss`](/docs/installation/cli), ensure that `styled-system/styles.css` is imported
+and that the `panda` command has been run (or is running with `--watch`).
 
 ### Some CSS is missing when using absolute imports
 
-This can happen when `tsconfig` (with `paths` or `baseUrl`) or with package.json [`#imports`](https://nodejs.org/api/packages.html#subpath-imports).
-Panda tries to automatically infer and read the custom paths defined in `tsconfig.json` file. However, there might be scenarios that won't work.
+This can happen when `tsconfig` (with `paths` or `baseUrl`) or with package.json
+[`#imports`](https://nodejs.org/api/packages.html#subpath-imports). Panda tries to automatically infer and read the
+custom paths defined in `tsconfig.json` file. However, there might be scenarios that won't work.
 
-To fix this add the `importMap` option to your `panda.config.js` file, setting it's value to match the way you import the `outdir` modules.
+To fix this add the `importMap` option to your `panda.config.js` file, setting it's value to match the way you import
+the `outdir` modules.
 
 ```app.tsx
 // app.tsx
@@ -198,19 +206,24 @@ This will ensure that the paths are resolved correctly, and HMR works as expecte
 
 You can use the `panda debug` to debug design token extraction & css generated from files.
 
-If the issue persists, you can try looking for it in the [issues](https://github.com/chakra-ui/panda/issues) or in the [discord](https://discord.gg/VQrkpsgSx7). If you can't find it, please create a minimal reproduction and submit [a new github issue](https://github.com/chakra-ui/panda/issues/new/choose) so we can help you.
+If the issue persists, you can try looking for it in the [issues](https://github.com/chakra-ui/panda/issues) or in the
+[discord](https://discord.gg/VQrkpsgSx7). If you can't find it, please create a minimal reproduction and submit
+[a new github issue](https://github.com/chakra-ui/panda/issues/new/choose) so we can help you.
 
 ---
 
 ### Why is my IDE not showing `styled-system` imports?
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your tsconfig.json file.
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+tsconfig.json file.
 
 ### HMR does not work when I use `tsconfig` paths?
 
-Panda tries to automatically infer and read the custom paths defined in `tsconfig.json` file. However, there might be scenarios where the hot module replacement doesn't work.
+Panda tries to automatically infer and read the custom paths defined in `tsconfig.json` file. However, there might be
+scenarios where the hot module replacement doesn't work.
 
-To fix this add the `importMap` option to your `panda.config.js` file, setting it's value to the specified `paths` in your `tsconfig.json` file.
+To fix this add the `importMap` option to your `panda.config.js` file, setting it's value to the specified `paths` in
+your `tsconfig.json` file.
 
 ```json
 // tsconfig.json
@@ -239,12 +252,17 @@ This will ensure that the paths are resolved correctly, and HMR works as expecte
 
 ## The postcss plugin sometimes seems slow or runs too frequently
 
-This is mostly specific to the host bundler (`vite`, `webpack` etc) you're using, it is up to them to decide when to run the postcss plugin again, and sometimes it can be more than needed for your usage.
-We do our best to cache the results of the postcss plugin by checking if the filesystem or your config have actually changed, but sometimes it might not be enough.
+This is mostly specific to the host bundler (`vite`, `webpack` etc) you're using, it is up to them to decide when to run
+the postcss plugin again, and sometimes it can be more than needed for your usage. We do our best to cache the results
+of the postcss plugin by checking if the filesystem or your config have actually changed, but sometimes it might not be
+enough.
 
-In those rare cases, you might want to swap to using the [CLI](/docs/installation/cli) instead, as it will always be more performant than the postcss alternative since we directly watch for filesystem changes and only run the extract/codegen steps when needed.
+In those rare cases, you might want to swap to using the [CLI](/docs/installation/cli) instead, as it will always be
+more performant than the postcss alternative since we directly watch for filesystem changes and only run the
+extract/codegen steps when needed.
 
-If you want to keep the convenience of having just one command to run, you can use something like `concurrently` for that:
+If you want to keep the convenience of having just one command to run, you can use something like `concurrently` for
+that:
 
 ```json file="package.json"
 {
