--- a/website/content/docs/installation/angular.mdx
+++ b/website/content/docs/installation/angular.mdx
@@ -3,9 +3,7 @@ title: Using Angular
 description: Easily use Panda with Angular with our dedicated integration.
 ---
 
-# Using Panda CSS with Angular
-
-Setting up Panda CSS in a Angular project using PostCSS.
+This guide shows you how to set up Panda CSS in an Angular project using PostCSS.
 
 ## Start a new project
 
@@ -13,7 +11,8 @@ Setting up Panda CSS in a Angular project using PostCSS.
 
 ### Create Vite project
 
-To get started, we will need to create a new Angular project using the official [scaffolding tool](https://angular.dev/tools/cli).
+To get started, we will need to create a new Angular project using the official
+[scaffolding tool](https://angular.dev/tools/cli).
 
 If you don't enter any parameter, the CLI will guide you through the process of creating a new Angular app.
 
@@ -73,7 +72,8 @@ Create a `postcss.config.json` file in the root of your project and add the foll
 }
 ```
 
-> You must use a JSON file for the PostCSS configuration, as the Angular CLI does not support JavaScript PostCSS configuration files.
+> You must use a JSON file for the PostCSS configuration, as the Angular CLI does not support JavaScript PostCSS
+> configuration files.
 
 ### Update package.json scripts
 
@@ -89,29 +89,33 @@ Open your `package.json` file and update the `scripts` section as follows:
   }
 }
 ```
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Angular components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Angular components are included in the `include` section of the
+`panda.config.ts` file.
 
 ```js {8, 17} filename="panda.config.ts"
-import { defineConfig } from "@pandacss/dev"
+import { defineConfig } from '@pandacss/dev'
 
 export default defineConfig({
- // Whether to use css reset
- preflight: true,
+  // Whether to use css reset
+  preflight: true,
 
- // Where to look for your css declarations
- include: ['./src/**/*.{js,jsx,ts,tsx}'],
+  // Where to look for your css declarations
+  include: ['./src/**/*.{js,jsx,ts,tsx}'],
 
- // Files to exclude
- exclude: [],
+  // Files to exclude
+  exclude: [],
 
- // The output directory for your css system
- outdir: "styled-system",
+  // The output directory for your css system
+  outdir: 'styled-system'
 })
 ```
 
@@ -154,22 +158,20 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `src/app.component.ts` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your
+`src/app.component.ts` file.
 
 ```typescript filename="src/app.component.ts"
-import { Component } from '@angular/core';
-import { css } from '../styled-system/css';
+import { Component } from '@angular/core'
+import { css } from '../styled-system/css'
 
 @Component({
   selector: 'app-root',
   standalone: true,
-  template: `
-    <div [class]="redBg"></div>
-  `,
+  template: ` <div [class]="redBg"></div> `
 })
 export class App {
-  redBg = css({ bg: 'red.400' });
+  redBg = css({ bg: 'red.400' })
 }
 ```
 
