--- a/website/content/docs/installation/astro.mdx
+++ b/website/content/docs/installation/astro.mdx
@@ -3,9 +3,7 @@ title: Using Astro
 description: Easily use Panda with Astro with our dedicated integration.
 ---
 
-# Using Panda CSS with Astro
-
-Setting up Panda CSS in a Astro project using our dedicated integration.
+This guide shows you how to set up Panda CSS in an Astro project using our dedicated integration.
 
 ## Setup
 
@@ -62,7 +60,8 @@ Open your `package.json` file and update the `scripts` section as follows:
 
     The `prepare` script that will run codegen after dependency installation. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
@@ -109,7 +108,6 @@ module.exports = {
 }
 ```
 
-
 ### Start your build process
 
 Run your build process with `npm run dev` or whatever command is configured in your package.json file.
@@ -149,15 +147,17 @@ import { css } from '../../styled-system/css';
 ---
 <div class={css({ fontSize: "2xl", fontWeight: 'bold' })}>Hello !</div>
 ```
+
 </Steps>
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
   // ...
-  "include":  ["src", "styled-system"]
+  "include": ["src", "styled-system"]
 }
 ```
