--- a/website/content/docs/installation/nextjs.mdx
+++ b/website/content/docs/installation/nextjs.mdx
@@ -3,11 +3,10 @@ title: Using Next.js
 description: Easily use Panda with Next.js with our dedicated integration.
 ---
 
-# Using Panda CSS with Next.js
+Setting up Panda CSS with Next.js is straightforward. Follow the steps below to get started.
 
-Panda CSS works out of the box with Next.js. You can use Panda CSS with Next.js by following the steps below.
-
-If you don't have Next.js app installed, you can follow the [Create a Next.js app](#create-a-nextjs-app) section to create a new Next.js app, otherwise you can skip to the [Install Panda CSS](#install-panda-css) section.
+If you don't have Next.js app installed, you can follow the [Create a Next.js app](#create-a-nextjs-app) section to
+create a new Next.js app, otherwise you can skip to the [Install Panda CSS](#install-panda-css) section.
 
 <RouteSwitch values={["app-dir","pages-dir"]}>
 
@@ -22,8 +21,8 @@ You can chose between these two options to start a new project:
   <Steps>
   ### Create a Next.js app
 
-First, create a Next.js app using the official [Create Next App](https://nextjs.org/docs/api-reference/create-next-app) CLI.
-We will name our project `test-app` but you can name it whatever you want.
+First, create a Next.js app using the official [Create Next App](https://nextjs.org/docs/api-reference/create-next-app)
+CLI. We will name our project `test-app` but you can name it whatever you want.
 
 If you don't enter any parameter, the CLI will guide you through the process of creating a new Next.js app.
 
@@ -120,7 +119,8 @@ Install Panda CSS dependency using your favorite package manager.
   {/* <!-- prettier-ignore-end --> */}
   </Tabs>
 
-`panda init --postcss` command will automatically create a `postcss.config.js` file at the root of your project with the following code:
+`panda init --postcss` command will automatically create a `postcss.config.js` file at the root of your project with the
+following code:
 
 ```js {3}
 module.exports = {
@@ -130,7 +130,8 @@ module.exports = {
 }
 ```
 
-For advanced configuration follow the Next.js PostCSS guide to set up a custom PostCSS configuration by referring to this [link](https://nextjs.org/docs/pages/building-your-application/configuring/post-css#customizing-plugins).
+For advanced configuration follow the Next.js PostCSS guide to set up a custom PostCSS configuration by referring to
+this [link](https://nextjs.org/docs/pages/building-your-application/configuring/post-css#customizing-plugins).
 
 ### Update package.json scripts
 
@@ -148,13 +149,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-The `prepare` script that will run codegen after dependency installation. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+The `prepare` script that will run codegen after dependency installation. Read more about
+[codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your React components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your React components are included in the `include` section of the `panda.config.ts`
+file.
 
 <RouteSwitchContent value="app-dir">
 {/* <!-- prettier-ignore-start --> */}
@@ -165,15 +169,12 @@ export default defineConfig({
 // Whether to use css reset
 preflight: true,
 
-// Where to look for your css declarations
-include: ["./src/components/**/*.{ts,tsx,js,jsx}", "./src/app/**/*.{ts,tsx,js,jsx}"],
+// Where to look for your css declarations include: ["./src/components/**/*.{ts,tsx,js,jsx}",
+"./src/app/**/*.{ts,tsx,js,jsx}"],
 
-// Files to exclude
-exclude: [],
+// Files to exclude exclude: [],
 
-// The output directory for your css system
-outdir: "styled-system",
-})
+// The output directory for your css system outdir: "styled-system", })
 
 ````
 {/* <!-- prettier-ignore-end --> */}
@@ -206,12 +207,12 @@ outdir: "styled-system",
 ### Configure the entry CSS with layers
 
 <RouteSwitchContent value="app-dir">
-  In your Next.js project, navigate to the `src/app` folder and open
-  `globals.css` file. Replace all the content with the following code:
+  In your Next.js project, navigate to the `src/app` folder and open `globals.css` file. Replace all the content with
+  the following code:
 </RouteSwitchContent>
 <RouteSwitchContent value="pages-dir">
-  In your Next.js project, navigate to the `src/styles` folder and open
-  `globals.css` file. Replace all the content with the following code:
+  In your Next.js project, navigate to the `src/styles` folder and open `globals.css` file. Replace all the content with
+  the following code:
 </RouteSwitchContent>
 
 ```css
@@ -265,9 +266,7 @@ export default function RootLayout({
 }>) {
   return (
     <html lang="en">
-      <body className={`${geistSans.variable} ${geistMono.variable}`}>
-        {children}
-      </body>
+      <body className={`${geistSans.variable} ${geistMono.variable}`}>{children}</body>
     </html>
   )
 }
@@ -296,23 +295,17 @@ export default function App({ Component, pageProps }: AppProps) {
 ### Start using Panda
 
 <RouteSwitchContent value="app-dir">
-  We will update the contents of `src/app/page.tsx` with the following snippet
-  that uses Panda CSS:
+  We will update the contents of `src/app/page.tsx` with the following snippet that uses Panda CSS:
 </RouteSwitchContent>
 <RouteSwitchContent value="pages-dir">
-  We will update the contents of `src/pages/index.tsx` with the following
-  snippet that uses Panda CSS:
+  We will update the contents of `src/pages/index.tsx` with the following snippet that uses Panda CSS:
 </RouteSwitchContent>
 
 ```tsx
 import { css } from '../../styled-system/css'
 
 export default function Home() {
-  return (
-    <div className={css({ fontSize: '2xl', fontWeight: 'bold' })}>
-      Hello 🐼!
-    </div>
-  )
+  return <div className={css({ fontSize: '2xl', fontWeight: 'bold' })}>Hello 🐼!</div>
 }
 ```
 
@@ -354,7 +347,8 @@ Open [http://localhost:3000](http://localhost:3000) with your browser to see the
 
 ### I don't see any styles
 
-Sometimes Next.js caches PostCSS generated styles and when that happens you need to clear the cache. To do that, delete the `.next` folder and restart your development server.
+Sometimes Next.js caches PostCSS generated styles and when that happens you need to clear the cache. To do that, delete
+the `.next` folder and restart your development server.
 
 You can also update you `package.json` scripts to delete the `.next` folder before each build:
 
@@ -375,7 +369,8 @@ This is a known issue with Next.js and you can track the progress here:
 
 ### I don't see any import autocomplete in my IDE
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
@@ -386,7 +381,8 @@ If you're not getting import autocomplete in your IDE, you may need to include t
 
 ### Codegen fails using es5
 
-If you run into any error related to "Transforming const to the configured target environment ("es5") is not supported yet", update your tsconfig to use es6 or higher:
+If you run into any error related to "Transforming const to the configured target environment ("es5") is not supported
+yet", update your tsconfig to use es6 or higher:
 
 ```json filename="tsconfig.json"
 {
