--- a/website/content/docs/installation/nuxt.mdx
+++ b/website/content/docs/installation/nuxt.mdx
@@ -3,9 +3,7 @@ title: Using Nuxt
 description: Easily use Panda with Nuxt with the vue integration.
 ---
 
-# Using Panda CSS with Nuxt
-
-Setting up Panda CSS in a Nuxt project using PostCSS.
+Learn how to set up Panda CSS in a Nuxt project using PostCSS.
 
 ## Start a new project
 
@@ -115,13 +113,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Vue components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Vue components are included in the `include` section of the `panda.config.ts`
+file.
 
 ```js {8, 17} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -131,11 +132,7 @@ export default defineConfig({
   preflight: true,
 
   // Where to look for your css declarations
-  include: [
-    './app.vue',
-    './components/**/*.{js,jsx,ts,tsx,vue}',
-    './pages/**/*.{js,jsx,ts,tsx,vue}'
-  ],
+  include: ['./app.vue', './components/**/*.{js,jsx,ts,tsx,vue}', './pages/**/*.{js,jsx,ts,tsx,vue}'],
 
   // Files to exclude
   exclude: [],
