--- a/website/content/docs/installation/preact.mdx
+++ b/website/content/docs/installation/preact.mdx
@@ -3,9 +3,7 @@ title: Using Preact
 description: Easily use Panda with Preact with our dedicated integration.
 ---
 
-# Using Panda CSS with Preact
-
-Setting up Panda CSS in a Preact project using PostCSS.
+This guide shows you how to set up Panda CSS in a Preact project using PostCSS.
 
 ## Start a new project
 
@@ -70,13 +68,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Preact components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Preact components are included in the `include` section of the `panda.config.ts`
+file.
 
 ```js {6} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -119,19 +120,15 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `src/routes/home/index.tsx` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your
+`src/routes/home/index.tsx` file.
 
 ```tsx filename="src/routes/home/index.tsx"
 import { h } from 'preact'
 import { css } from '../../../styled-system/css'
 
 const Home = () => {
-  return (
-    <div class={css({ fontSize: '2xl', fontWeight: 'bold', pt: '56px' })}>
-      Hello 🐼!
-    </div>
-  )
+  return <div class={css({ fontSize: '2xl', fontWeight: 'bold', pt: '56px' })}>Hello 🐼!</div>
 }
 
 export default Home
@@ -141,7 +138,8 @@ export default Home
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
