--- a/website/content/docs/installation/react-router.mdx
+++ b/website/content/docs/installation/react-router.mdx
@@ -3,9 +3,7 @@ title: Using React Router
 description: Easily use Panda with React Router with our dedicated integration.
 ---
 
-# Using Panda CSS with React Router
-
-Setting up Panda CSS in a React Router project using PostCSS.
+This guide will show you how to set up Panda CSS in a React Router project using PostCSS.
 
 ## Start a new project
 
@@ -104,13 +102,13 @@ Open your `package.json` file and update the `scripts` section as follows:
 - `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
   [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation.
-> So you can add the Panda CSS output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the Panda CSS output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your React Router components are included in the `include` section of
-the `panda.config.ts` file.
+Make sure that all of the paths of your React Router components are included in the `include` section of the
+`panda.config.ts` file.
 
 ```ts {5, 8, 11} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -167,14 +165,7 @@ Please note the `?url` query parameter in the `import` statement. This is requir
 to the CSS file.
 
 ```tsx {11, 15} filename="app/root.tsx"
-import {
-  isRouteErrorResponse,
-  Links,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration
-} from 'react-router'
+import { isRouteErrorResponse, Links, Meta, Outlet, Scripts, ScrollRestoration } from 'react-router'
 
 import type { Route } from './+types/root'
 import stylesheet from './app.css?url'
@@ -234,26 +225,21 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `app/routes/home.tsx` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your
+`app/routes/home.tsx` file.
 
 ```tsx filename="app/routes/home.tsx"
 import type { Route } from './+types/home'
 import { css } from 'styled-system/css'
 
 export function meta({}: Route.MetaArgs) {
-  return [
-    { title: 'New React Router App' },
-    { name: 'description', content: 'Welcome to React Router!' }
-  ]
+  return [{ title: 'New React Router App' }, { name: 'description', content: 'Welcome to React Router!' }]
 }
 
 export default function Home() {
   return (
     <div>
-      <h1 className={css({ fontSize: '2xl', fontWeight: 'bold' })}>
-        Welcome to the home page
-      </h1>
+      <h1 className={css({ fontSize: '2xl', fontWeight: 'bold' })}>Welcome to the home page</h1>
     </div>
   )
 }
@@ -263,8 +249,8 @@ export default function Home() {
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system`
-directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
