--- a/website/content/docs/installation/redwood.mdx
+++ b/website/content/docs/installation/redwood.mdx
@@ -3,9 +3,7 @@ title: Using Redwood
 description: Easily use Panda with Redwood.js with our dedicated integration.
 ---
 
-# Using Panda CSS with Redwood
-
-Setting up Panda CSS in a Redwood project using PostCSS.
+This guide shows you how to set up Panda CSS in a Redwood project using PostCSS.
 
 > Redwood uses `yarn` as its primary package manager.
 
@@ -47,7 +45,8 @@ yarn panda init --postcss
 
 ### Move to config folder
 
-Redwood uses a `config` folder for all of the configuration files. Move the `panda.config.ts` and `postcss.config.js` files to the `config` folder.
+Redwood uses a `config` folder for all of the configuration files. Move the `panda.config.ts` and `postcss.config.js`
+files to the `config` folder.
 
 ```bash
 mv panda.config.ts postcss.config.js config/
@@ -73,7 +72,7 @@ Update the tsconfig file to include the `styled-system` folder.
 
 ```json {6} filename="web/tsconfig.json"
 {
-   // ...
+  // ...
   "compilerOptions": {
     "paths": {
       // ...
@@ -95,13 +94,16 @@ Open the `web/package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Redwood components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Redwood components are included in the `include` section of the
+`panda.config.ts` file.
 
 ```js {5} filename="web/config/panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -152,9 +154,7 @@ const HomePage = () => {
           px: '8'
         })}
       >
-        <h1 className={css({ fontSize: '4xl', fontWeight: 'bold' })}>
-          HomePage
-        </h1>
+        <h1 className={css({ fontSize: '4xl', fontWeight: 'bold' })}>HomePage</h1>
         <p>Hello World</p>
       </div>
     </>
@@ -168,11 +168,12 @@ export default HomePage
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="web/tsconfig.json"
 {
   // ...
-  "include":  ["src", "styled-system"]
+  "include": ["src", "styled-system"]
 }
 ```
