--- a/website/content/docs/installation/rsbuild.mdx
+++ b/website/content/docs/installation/rsbuild.mdx
@@ -3,9 +3,7 @@ title: Using Rsbuild
 description: Easily use Panda with Rsbuild, React and Typescript with our dedicated integration.
 ---
 
-# Using Panda CSS with Rsbuild
-
-Setting up Panda CSS in a Rsbuild project using PostCSS.
+This guide shows you how to set up Panda CSS in a Rsbuild project using PostCSS.
 
 ## Start a new project
 
@@ -96,13 +94,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your React components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your React components are included in the `include` section of the `panda.config.ts`
+file.
 
 ```js {8} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -164,18 +165,14 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `src/App.tsx` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your `src/App.tsx`
+file.
 
 ```tsx filename="src/App.tsx"
 import { css } from '../styled-system/css'
 
 function App() {
-  return (
-    <div className={css({ fontSize: '2xl', fontWeight: 'bold' })}>
-      Hello 🐼!
-    </div>
-  )
+  return <div className={css({ fontSize: '2xl', fontWeight: 'bold' })}>Hello 🐼!</div>
 }
 
 export default App
@@ -185,7 +182,8 @@ export default App
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
