--- a/website/content/docs/installation/storybook.mdx
+++ b/website/content/docs/installation/storybook.mdx
@@ -3,9 +3,7 @@ title: Using Storybook
 description: Easily use Panda with Storybook with our dedicated integration.
 ---
 
-# Using Panda CSS with Storybook
-
-Setting up Panda CSS in a Storybook project using PostCSS.
+Learn how to set up Panda CSS in a Storybook project using PostCSS.
 
 ## Setup
 
@@ -15,7 +13,8 @@ We are assuming that you already have a project set up with a framework like Rea
 
 ### Install Storybook
 
-Storybook needs to be installed into a project that is already set up with a framework. It will not work on an empty project.
+Storybook needs to be installed into a project that is already set up with a framework. It will not work on an empty
+project.
 
 <Tabs items={['pnpm', 'npm', 'yarn', 'bun']}>
 {/* <!-- prettier-ignore-start --> */}
@@ -75,8 +74,8 @@ Install panda and create your `panda.config.ts` file.
   {/* <!-- prettier-ignore-end --> */}
 </Tabs>
 
-If you are using Storybook with the Vite builder, you will have to update your PostCSS config file to use the array syntax for the plugins instead of the
-object syntax. Simply change `postcss.config.[c]js`:
+If you are using Storybook with the Vite builder, you will have to update your PostCSS config file to use the array
+syntax for the plugins instead of the object syntax. Simply change `postcss.config.[c]js`:
 
 ```diff {3} filename="postcss.config.js"
 module.exports = {
@@ -99,13 +98,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Storybook components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Storybook components are included in the `include` section of the
+`panda.config.ts` file.
 
 ```js {9} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -113,11 +115,7 @@ export default defineConfig({
   // Whether to use css reset
   preflight: true,
   // Where to look for your css declarations
-  include: [
-    './src/**/*.{js,jsx,ts,tsx}',
-    './pages/**/*.{js,jsx,ts,tsx}',
-    './stories/**/*.{js,jsx,ts,tsx}'
-  ],
+  include: ['./src/**/*.{js,jsx,ts,tsx}', './pages/**/*.{js,jsx,ts,tsx}', './stories/**/*.{js,jsx,ts,tsx}'],
   // Files to exclude
   exclude: [],
   // The output directory for your css system
@@ -287,8 +285,8 @@ With that in place, you should see the light/dark switcher in Storybook's toolba
 
 ### Cannot find postcss plugin
 
-If you are having issues with the PostCSS plugin similar to `Cannot find module '@pandacss/dev/postcss'`,
-update the PostCSS config as follows:
+If you are having issues with the PostCSS plugin similar to `Cannot find module '@pandacss/dev/postcss'`, update the
+PostCSS config as follows:
 
 ```js filename="postcss.config.js"
 module.exports = {
@@ -298,7 +296,9 @@ module.exports = {
 
 ### HMR not triggered
 
-If you are having issues with HMR not being triggered after a `panda.config.ts` change (or one of its [dependencies](/docs/references/config#dependencies), you can manually specify the files that should trigger a rebuild by adding the following to your `panda.config.ts`:
+If you are having issues with HMR not being triggered after a `panda.config.ts` change (or one of its
+[dependencies](/docs/references/config#dependencies), you can manually specify the files that should trigger a rebuild
+by adding the following to your `panda.config.ts`:
 
 ```js filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -313,8 +313,10 @@ export default defineConfig({
 
 If you are having issues with your `args` not generating the expected CSS, it's probably because of:
 
-- you didn't add a file glob for the Storybook files in your [`config.include`](/docs/references/config#include) like `"./stories/**/*.{js,jsx,ts,tsx}"`
-- you didn't wrap your `args` object (or some part of it) with the [`.raw()` marker that helps Panda find style usage](https://panda-css.com/docs/guides/dynamic-styling#alternative)
+- you didn't add a file glob for the Storybook files in your [`config.include`](/docs/references/config#include) like
+  `"./stories/**/*.{js,jsx,ts,tsx}"`
+- you didn't wrap your `args` object (or some part of it) with the
+  [`.raw()` marker that helps Panda find style usage](https://panda-css.com/docs/guides/dynamic-styling#alternative)
 
 ```tsx filename="stories/Button.stories.tsx"
 import type { Meta, StoryObj } from '@storybook/react'
@@ -332,10 +334,13 @@ export const Funky: Story = {
 
 ### Some recipes styles are missing
 
-If you are having issues with your config `recipes` or `slotRecipes` not generating the expected CSS, it's probably because of:
+If you are having issues with your config `recipes` or `slotRecipes` not generating the expected CSS, it's probably
+because of:
 
-- you didn't add a file glob for the Storybook files in your [`config.include`](/docs/references/config#include) like `"./stories/**/*.{js,jsx,ts,tsx}"`
-- you haven't used every recipes variants in your app, so you might want to pre-generate it (only for storybook usage) with [`staticCss`](/docs/guides/static)
+- you didn't add a file glob for the Storybook files in your [`config.include`](/docs/references/config#include) like
+  `"./stories/**/*.{js,jsx,ts,tsx}"`
+- you haven't used every recipes variants in your app, so you might want to pre-generate it (only for storybook usage)
+  with [`staticCss`](/docs/guides/static)
 
 ```tsx filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
