--- a/website/content/docs/installation/svelte.mdx
+++ b/website/content/docs/installation/svelte.mdx
@@ -3,9 +3,7 @@ title: Using Svelte
 description: Easily use Panda with Svelte with our dedicated integration.
 ---
 
-# Using Panda CSS with Svelte
-
-Setting up Panda CSS in a Svelte project using PostCSS.
+This guide will show you how to set up Panda CSS in a Svelte project using PostCSS.
 
 ## Start a new project
 
@@ -91,7 +89,6 @@ Enter the newly created directory and install the dependencies.
   {/* <!-- prettier-ignore-end --> */}
 </Tabs>
 
-
 ### Install Panda
 
 To install Panda and corresponding dependencies run the following commands:
@@ -143,29 +140,33 @@ Open your `package.json` file and update the `scripts` section as follows:
   }
 }
 ```
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-  > This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+
+  > This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+  > the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Svelte components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Svelte components are included in the `include` section of the `panda.config.ts`
+file.
 
 ```js {8} filename="panda.config.ts"
-import { defineConfig } from "@pandacss/dev"
+import { defineConfig } from '@pandacss/dev'
 
 export default defineConfig({
- // Whether to use css reset
- preflight: true,
+  // Whether to use css reset
+  preflight: true,
 
- // Where to look for your css declarations
- include: ['./src/**/*.{js,ts,svelte}'],
+  // Where to look for your css declarations
+  include: ['./src/**/*.{js,ts,svelte}'],
 
- // Files to exclude
- exclude: [],
+  // Files to exclude
+  exclude: [],
 
- // The output directory for your css system
- outdir: "styled-system",
+  // The output directory for your css system
+  outdir: 'styled-system'
 })
 ```
 
@@ -174,33 +175,32 @@ export default defineConfig({
 To configure Svelte preprocess to use PostCSS and add Panda alias update the `svelte.config.js` file as follows:
 
 ```js {3,11-13,21-23} filename="svelte.config.js"
-import adapter from '@sveltejs/adapter-auto';
-import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
+import adapter from '@sveltejs/adapter-auto'
+import { vitePreprocess } from '@sveltejs/vite-plugin-svelte'
 /** @type {import('@sveltejs/kit').Config} */
 const config = {
-	// Consult https://kit.svelte.dev/docs/integrations#preprocessors
-	// for more information about preprocessors
-	preprocess: [
-		vitePreprocess()
-	],
+  // Consult https://kit.svelte.dev/docs/integrations#preprocessors
+  // for more information about preprocessors
+  preprocess: [vitePreprocess()],
 
-	kit: {
-		// adapter-auto only supports some environments, see https://kit.svelte.dev/docs/adapter-auto for a list.
-		// If your environment is not supported or you settled on a specific environment, switch out the adapter.
-		// See https://kit.svelte.dev/docs/adapters for more information about adapters.
-		adapter: adapter(),
-		alias: {
-			'styled-system': './styled-system/*'
-		}
-	}
-};
+  kit: {
+    // adapter-auto only supports some environments, see https://kit.svelte.dev/docs/adapter-auto for a list.
+    // If your environment is not supported or you settled on a specific environment, switch out the adapter.
+    // See https://kit.svelte.dev/docs/adapters for more information about adapters.
+    adapter: adapter(),
+    alias: {
+      'styled-system': './styled-system/*'
+    }
+  }
+}
 
-export default config;
+export default config
 ```
 
 ### Update Vite config
 
-To be able to import `styled-system` files in your Svelte components you will need to update the `vite.config.js` file as follows:
+To be able to import `styled-system` files in your Svelte components you will need to update the `vite.config.js` file
+as follows:
 
 ```js {6-10} filename="vite.config.js"
 import { sveltekit } from '@sveltejs/kit/vite'
@@ -210,22 +210,23 @@ export default defineConfig({
   plugins: [sveltekit()],
   server: {
     fs: {
-      allow: ['styled-system'],
-    },
-  },
+      allow: ['styled-system']
+    }
+  }
 })
 ```
 
-If you’re using Storybook for a SvelteKit project, you need to replicate the same Vite server config changes. In your .storybook folder, you likely have a `main.js` (or `vite.config.js` in older Storybook versions). Update it as follows:
+If you’re using Storybook for a SvelteKit project, you need to replicate the same Vite server config changes. In your
+.storybook folder, you likely have a `main.js` (or `vite.config.js` in older Storybook versions). Update it as follows:
 
 ```js filename="main.js"
-import { defineConfig, mergeConfig } from 'vite';
+import { defineConfig, mergeConfig } from 'vite'
 
 /** @type { import('@storybook/sveltekit').StorybookConfig } */
 
 const config = {
   // other Storybook config...
-  viteFinal: async (config) => {
+  viteFinal: async config => {
     return mergeConfig(
       config,
       defineConfig({
@@ -235,10 +236,10 @@ const config = {
           }
         }
       })
-    );
+    )
   }
-};
-export default config;
+}
+export default config
 ```
 
 ### Configure the entry CSS with layers
@@ -292,8 +293,8 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `src/routes/+page.svelte` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your
+`src/routes/+page.svelte` file.
 
 ```jsx filename="src/routes/+page.svelte"
 <script>
@@ -309,28 +310,31 @@ Here is the snippet of code that you can use in your `src/routes/+page.svelte` f
 	Hello 🐼!
 </div>
 ```
+
 </Steps>
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your TypeScript config. However, in Svelte your main `tsconfig.json` file is extending the autogenerated one. To extend it without overriding the defaults adjust your `svelte.config.js` to include following entry:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+TypeScript config. However, in Svelte your main `tsconfig.json` file is extending the autogenerated one. To extend it
+without overriding the defaults adjust your `svelte.config.js` to include following entry:
 
 ```js filename="svelte.config.js"
-import adapter from '@sveltejs/adapter-auto';
-import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
+import adapter from '@sveltejs/adapter-auto'
+import { vitePreprocess } from '@sveltejs/vite-plugin-svelte'
 /** @type {import('@sveltejs/kit').Config} */
 const config = {
   // ...
   kit: {
     // ...
-     typescript: {
-      config: (config) => {
-        config.include.push("../styled-system");
-        return config;
-      },
+    typescript: {
+      config: config => {
+        config.include.push('../styled-system')
+        return config
+      }
     }
   }
-};
+}
 
-export default config;
+export default config
 ```
