--- a/website/content/docs/installation/vite.mdx
+++ b/website/content/docs/installation/vite.mdx
@@ -3,9 +3,7 @@ title: Using Vite
 description: Easily use Panda with Vite, React and Typescript with our dedicated integration.
 ---
 
-# Using Panda CSS with Vite
-
-Setting up Panda CSS in a Vite project using PostCSS.
+This guide will show you how to set up Panda CSS in a Vite project using PostCSS.
 
 ## Start a new project
 
@@ -97,13 +95,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your React components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your React components are included in the `include` section of the `panda.config.ts`
+file.
 
 ```js {8} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -134,7 +135,8 @@ Add this code to an `src/index.css` file imported in the root component of your 
 @layer reset, base, tokens, recipes, utilities;
 ```
 
-> **Note:** Feel free to remove `src/App.css` file as we don't need it anymore, and make sure to remove the import from the `src/App.tsx` file.
+> **Note:** Feel free to remove `src/App.css` file as we don't need it anymore, and make sure to remove the import from
+> the `src/App.tsx` file.
 
 ## Start your build process
 
@@ -167,18 +169,14 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `src/App.tsx` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your `src/App.tsx`
+file.
 
 ```tsx filename="src/App.tsx"
 import { css } from '../styled-system/css'
 
 function App() {
-  return (
-    <div className={css({ fontSize: '2xl', fontWeight: 'bold' })}>
-      Hello 🐼!
-    </div>
-  )
+  return <div className={css({ fontSize: '2xl', fontWeight: 'bold' })}>Hello 🐼!</div>
 }
 
 export default App
@@ -188,7 +186,8 @@ export default App
 
 ## Troubleshooting
 
-If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your `tsconfig.json` file:
+If you're not getting import autocomplete in your IDE, you may need to include the `styled-system` directory in your
+`tsconfig.json` file:
 
 ```json filename="tsconfig.json"
 {
