--- a/website/content/docs/installation/vue.mdx
+++ b/website/content/docs/installation/vue.mdx
@@ -3,9 +3,7 @@ title: Using Vue
 description: Easily use Panda with Vue with our dedicated integration.
 ---
 
-# Using Panda CSS with Vue
-
-Setting up Panda CSS in a Vue project using PostCSS.
+Learn how to set up Panda CSS in a Vue project using PostCSS.
 
 ## Start a new project
 
@@ -13,7 +11,8 @@ Setting up Panda CSS in a Vue project using PostCSS.
 
 ### Create Vite project
 
-To get started, we will need to create a new Vue project using the official [scaffolding tool](https://github.com/vuejs/create-vue).
+To get started, we will need to create a new Vue project using the official
+[scaffolding tool](https://github.com/vuejs/create-vue).
 
 If you don't enter any parameter, the CLI will guide you through the process of creating a new Vue app.
 
@@ -138,13 +137,16 @@ Open your `package.json` file and update the `scripts` section as follows:
 }
 ```
 
-- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about [codegen](/docs/references/cli#panda-codegen) in the CLI section.
+- `"prepare"` - script that will run Panda CSS CLI codegen before each build. Read more about
+  [codegen](/docs/references/cli#panda-codegen) in the CLI section.
 
-> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add the output directory to your `.gitignore` file and not worry about it.
+> This step ensures that the panda output directory is regenerated after each dependency installation. So you can add
+> the output directory to your `.gitignore` file and not worry about it.
 
 ### Configure the content
 
-Make sure that all of the paths of your Vue components are included in the `include` section of the `panda.config.ts` file.
+Make sure that all of the paths of your Vue components are included in the `include` section of the `panda.config.ts`
+file.
 
 ```js {8, 17} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -203,8 +205,8 @@ Run the following command to start your development server.
 
 ### Start using Panda
 
-Now you can start using Panda CSS in your project.
-Here is the snippet of code that you can use in your `src/App.vue` file.
+Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your `src/App.vue`
+file.
 
 ```vue-html filename="src/App.vue"
 <script setup lang="ts">
