--- a/website/content/docs/migration/styled-components.mdx
+++ b/website/content/docs/migration/styled-components.mdx
@@ -3,11 +3,11 @@ title: Migrating from Styled Components
 description: Migrate your project from Styled Components to Panda.
 ---
 
-# Migrating from Styled Components
+This guide outlines the steps needed to migrate your project from Styled Components to Panda and highlights key design
+differences between the two libraries.
 
-This guide outlines the steps needed to migrate your project from Styled Components to Panda, and some design differences between the two libraries.
-
-> **Disclaimer:** This isn't about comparing which one is best. Panda and Styled Components are two different CSS-in-JS solutions with design decisions.
+> **Disclaimer:** This isn't about comparing which one is best. Panda and Styled Components are two different CSS-in-JS
+> solutions with design decisions.
 
 Here are some similarities between the two libraries.
 
@@ -21,7 +21,8 @@ Below are some differences between the two libraries.
 
 In styled-components, you can use both tagged template literals and object syntax to style components.
 
-In Panda, you need to decide which syntax you want to use. Panda recommends using the object syntax, but provides a way to opt-in to tagged template literals.
+In Panda, you need to decide which syntax you want to use. Panda recommends using the object syntax, but provides a way
+to opt-in to tagged template literals.
 
 To initialize a project with the object syntax, run the following command.
 
@@ -86,7 +87,8 @@ const Button = styled.button({
 })
 ```
 
-In Panda, you add the style object to the `base` key of the style object. The `styled` factory allows you define base styles, variants and compound variants of your component.
+In Panda, you add the style object to the `base` key of the style object. The `styled` factory allows you define base
+styles, variants and compound variants of your component.
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -121,7 +123,8 @@ const Button = styled.button`
 `
 ```
 
-In Panda, we model interpolations using the variants API. This allows define style groups or recipes that can be applied to components.
+In Panda, we model interpolations using the variants API. This allows define style groups or recipes that can be applied
+to components.
 
 ````jsx
 const Button = styled('button', {
@@ -165,7 +168,8 @@ const App = () => (
 )
 ````
 
-In Panda, you define tokens in the `theme` key of the `panda.config.ts` file. This allows you to access the tokens in your styles without the need for React's context API.
+In Panda, you define tokens in the `theme` key of the `panda.config.ts` file. This allows you to access the tokens in
+your styles without the need for React's context API.
 
 ```tsx
 // panda.config.ts
@@ -187,7 +191,8 @@ export default defineConfig({
 
 ### Using Tokens
 
-In styled-components, you can use tokens in your styles using a function approach that provides the `theme` prop, and requires ambient type declarations to get type safety.
+In styled-components, you can use tokens in your styles using a function approach that provides the `theme` prop, and
+requires ambient type declarations to get type safety.
 
 ```tsx
 import styled from 'styled-components'
@@ -210,7 +215,8 @@ declare module 'styled-components' {
 }
 ```
 
-In Panda, the tokens are automatically available in your styles and connected to each css property, removing the need for an interpolation function.
+In Panda, the tokens are automatically available in your styles and connected to each css property, removing the need
+for an interpolation function.
 
 ```tsx
 // panda.config.ts
@@ -247,7 +253,8 @@ const StyledLink = styled('a', {
 
 ### Tagged Template Syntax
 
-In styled-components, you need to write the media query styles manually or use a helper function like `styled-media-query`.
+In styled-components, you need to write the media query styles manually or use a helper function like
+`styled-media-query`.
 
 ```tsx
 import styled from 'styled-components'
@@ -264,7 +271,8 @@ const Button = styled.button`
 `
 ```
 
-In Panda, it's pretty much the same thing except that you can't do any interpolation in the media query styles due the static nature of Panda.
+In Panda, it's pretty much the same thing except that you can't do any interpolation in the media query styles due the
+static nature of Panda.
 
 ```tsx
 import { styled } from '../styled-system/jsx'
@@ -331,7 +339,8 @@ const GlobalStyle = createGlobalStyle`
 `
 ```
 
-In Panda, you can use the `globalCss` key of the `panda.config.ts` file to define global styles. This will automatically add styles to the project via PostCSS.
+In Panda, you can use the `globalCss` key of the `panda.config.ts` file to define global styles. This will automatically
+add styles to the project via PostCSS.
 
 ```tsx
 // panda.config.ts
@@ -472,8 +481,10 @@ try {
 }
 ```
 
-In Panda, you don't need to configure anything. Panda automatically extracts the styles and injects them at build time using PostCSS.
+In Panda, you don't need to configure anything. Panda automatically extracts the styles and injects them at build time
+using PostCSS.
 
 ## Conclusion
 
-Before choosing your preferred CSS-in-JS library, be sure to consider your engineering and design goals. Both Styled components and Panda are capable of achieving many of the same styling goals, but they have different approaches.
+Before choosing your preferred CSS-in-JS library, be sure to consider your engineering and design goals. Both Styled
+components and Panda are capable of achieving many of the same styling goals, but they have different approaches.
